*Empty MediaWiki Message*

--- a/Папєжь_Алєѯандръ_Ѕ҃.mw
+++ b/Папєжь_Алєѯандръ_Ѕ҃.mw
@@ -1,9 +1,11 @@
-[[Видъ:Alexander VI - Pinturicchio detail.jpg|thumb|150 px|Папежь Алеѯандръ Ѕ]]
-'''Алеѯандръ Ѕ''' [[папежь]] бѣ (лѣта 1492 аѵгѹста 11 числа — лѣта 1503 аѵгѹста 18 числа).
-Алеѯандръ Ѕ ([[Родриго Ленцѹоли]], Алеѯандръ Ѕ [[Борджи]]) рожденъ [[Валенсї|Валенсїи]] ѥстъ лѣта 1431 и папежа нетии [[Папежь Калиѯъ Г|Калиѯа Г]] бѣ. Зъванъ стрыѥмь своимъ приде въ [[Римъ]] лѣта 1455 идеже приѩлъ [[кардиналъ|кардинальскъ]] санъ ѥстъ. И жилъ въ блѫдѣ съ патрик҄ѥѭ [[Роза Ваноца|Розоѭ Ваноцеѭ]] бѣ же роди ѥмѹ четыри сыны ([[Чезаре Борджи|Чезара]] и [[Гифри Борджи|Гифри]] да ина дъва) да дъщь [[Лѹкреци Борджи|Лѹкрециѭ]]. Лѣта 1492 аѵгѹста 11 числа съ застѫпомь кардинала [[Кардиналъ Сфорца|Сфорца]] и [[Кардиналъ Чибо|Чибо]] приѩлъ санъ папежа и сѧ Алеѯандръ Ѕ Борджи санъ. И жилъ Алеѯандръ въ блѫдѣ мрьзъкомь съ дъчериѭ своѥѭ Лѹкрециѥѭ бѣ. Дъва коньчьна лѣта сво ѹмножилъ Алеѯандръ кѹпъ [[Индѹлгенци|индѹлгенцими]] и саны и капами кардинальсками бо истъщи сѧ [[Ватиканъ|Ватиканьска]] скотьница о бещисльнь рать [[Италї|Италиискъ]] и отъ ѥго велика блѫда.
-Сѧ лѣта 1503 аѵгѹста 18 числа отравихъ.
+[[Видъ:Alexander VI - Pinturicchio detail.jpg|thumb|150 px|Папєжь Алєѯандръ Ꙃ҃]]
+'''Алєѯандръ Ꙃ҃''' [[папєжь]] бѣ · лѣ́та 1492 аѵгоуста 11 числа — лѣ́та 1503 аѵгоуста 18 числа
 
-== Зьри такожде ==
+Алєѯандръ Ꙃ҃ · Родриго Лєнцоуоли · Алєѯандръ Ꙃ҃ [[Борджиꙗ]] · рождєнъ [[Валєнсїꙗ|Валєнсїи]] ѥ́стъ лѣ́та 1431 и папєжа нєтии [[Папєжь Калиѯъ Г҃|Калиѯа Г҃]] бѣ ⁙ Ꙁъванъ стрꙑѥмь своимъ придє въ [[Ри́мъ]] лѣ́та 1455 идєжє приѩлъ [[кардиналъ|кардинальскъ]] санъ ѥ́стъ ⁙ И жилъ въ блѫдѣ съ патрик҄ѥѭ [[Роꙁа Ваноца|Роꙁоѭ Ваноцєѭ]] бѣ ꙗжє роди ѥмоу чєтꙑри сꙑнꙑ · [[Чєꙁарє Борджиꙗ|Чєꙁара]] и [[Гифри Борджиꙗ|Гифриꙗ]] да инаꙗ дъва · да дъщь [[Лоукрєциꙗ Борджиꙗ|Лоукрєциѭ]] ⁙ Лѣта 1492 аѵгоуста 11 числа съ ꙁастѫпомь кардинала [[Кардиналъ Сфорца|Сфорца]] и [[Кардиналъ Чибо|Чибо]] приѩлъ санъ папєжа и сѧ Алєѯандръ Ꙃ҃ Борджиꙗ нарєчє ⁙ И жилъ Алєѯандръ въ блѫдѣ мрьꙁъкомь съ дъчєриѭ своѥѭ Лоукрєциѥѭ бѣ ⁙ Дъва коньчьна лѣта своꙗ оумножилъ Алєѯандръ коупъ [[Индоулгєнциꙗ|индоулгєнциꙗми]] и санꙑ и капами кардинальсками бо истъщи сѧ [[Ватиканъ|Ватиканьска]] скотьница о бєщисльнь рать [[Италі́ꙗ|Италі́искъ]] и отъ ѥго вєлика блѫда
+
+Сѧ лѣта 1503 аѵгоуста 18 числа отравихъ.
+
+== ꙁьри́ та́кождє ==
 {{commonscat|Alexander VI}}
 [[Category:Людиѥ|А]]
 
