--- a/Чєшьско.mw
+++ b/Чєшьско.mw
@@ -25,6 +25,7 @@
 [[ang:Cecland]]
 [[ar:التشيك]]
 [[arc:ܬܫܝܟ]]
+[[arz:التشيك]]
 [[ast:República Checa]]
 [[az:Çex Respublikası]]
 [[bar:Tschechische Republik]]
