--- a/Чєтврьтъкъ.mw
+++ b/Чєтврьтъкъ.mw
@@ -10,7 +10,7 @@
 [[ast:Xueves]]
 [[az:Cümə axşamı]]
 [[ba:Кесаҙна]]
-[[bar:Pfinstig]]
+[[bar:Pfinsda]]
 [[bat-smg:Ketvergs]]
 [[be-x-old:Чацьвер]]
 [[bg:Четвъртък]]
