*Empty MediaWiki Message*

--- a/Новосибирьскъ.mw
+++ b/Новосибирьскъ.mw
@@ -1,42 +1,42 @@
-{{Градъ|Имѧ =  Новосибирьскъ
+{{coord|display=title|55|02||N|82|55||E|type:city}}
+{{Градъ|Имѧ =  Новосиби́рьскъ
 | знамѧ= Novosibirsk-city flag.svg
 | знакъ = Coat of Arms of Novosibirsk.svg
-| Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
-| Глава = Владимиръ Городецкыи
+| Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсі́ꙗ
+| Глава = Владимиръ Городєцкꙑи
 | Людии = 1 391,9
 | Основанъ = 1893
 | Нареченъ градъ = 1903
 | Харта = [[Видъ:NovosibirskLocatie.png|200 px]]
 }}
-'''Новосибирьскъ''' ({{Lang-ru|Новосибирск}}) [[Рѡсї|Рѡсїѩ]] градъ ѥсть. Новосибирьскъ наиболии градъ [[Сибирь|Сибири]] ѥсть. Главьнъ градъ [[Новосибирьска область|Новосибирьскы]] области ѥстъ. Людии обитаѥтъ 1 391,9. Новосибирьскъ бол҄ии градъ [[Сибирь|Сибири]] ѥстъ.
+'''Новосиби́рьскъ''' и {{Lang-ru|Новосибирск}} · [[Рѡсі́ꙗ|Рѡсі́ѩ]] [[Новосиби́рьска о́бласть|Новосибирьскꙑ]] области гла́вьнъ гра́дъ ѥ́сть ⁙ Новосиби́рьскъ наибол҄ии гра́дъ [[Сиби́рь|Сиби́ри]] ѥ́сть ⁙ Люди́и обита́ѥтъ 1 391,9 
 
-== Їсторї ==
+== їсторі́ꙗ ==
+[[Дѣ́ло:Вид на центр с вертолёта.jpg|thumb|left]]
+Ꙁьданъ [[О́бь|Оби]] рѣцѣ 1893 лѣ́та [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣꙁъсибирьсцѣ колѣинѣ пѫти]] ѥ́стъ ⁙ Новосиби́рьска и́мѧ о 1893 лѣ́та до 1895 лѣ́та Алєѯандровьско сєло · а до 1925 лѣ́та Новонїколаѥвьскъ бѣ ⁙ Нарєчєнъ гра́дъ 1903 лѣ́та ѥ́стъ
 
-Зьданъ [[Обь|Оби]] рѣцѣ 1893 лѣта [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣзъсибирьсцѣ колѣинѣ пѫти]] ѥстъ. Новосибирьска имѧ о 1893 лѣта до 1895 лѣта Алеѯандровьско (село), а до 1925 лѣта Новонїколаѥвьскъ бѣ. Нареченъ градъ 1903 лѣта ѥстъ.
+1986 лѣ́та Новосиби́рьскѣ [[мєтрополїтєнъ]] съꙁиждєнъ бѣ
 
-1986 лѣта Новосибирьскѣ [[метрополїтенъ]] съзижденъ бѣ.
+== Новосиби́рьска чѧ́сти ==
+* Ꙁаѥльцовьска чѧ́сть
+* Ꙃєржиньска чѧ́сть
+* Жєлѥꙁнодорожьна чѧ́сть
+* Калининьска чѧ́сть
+* Кировьска чѧ́сть
+* Лѥниньска чѧ́сть
+* Октѡврїиска чѧ́сть
+* Пѥрвомаїска чѧ́сть
+* Съвѣтьска чѧ́сть
+* Срѣдьнꙗ чѧ́сть
 
-== Новосибирьска чѧсти ==
-* Ꙁаѥльцовьска чѧсть
-* Ꙃєржиньска чѧсть
-* Жєлѥꙁнодорожьна чѧсть
-* Калининьска чѧсть
-* Кировьска чѧсть
-* Лѥниньска чѧсть
-* Октѡврїиска чѧсть
-* Пѥрвомаїска чѧсть
-* Съвѣтьска чѧсть
-* Срѣдьн чѧсть
-
-== Зьри такожде ==
+== ꙁьри́ та́кождє ==
 {{commonscat|Novosibirsk}}
+* [http://www.novo-sibirsk.ru/ Новосиби́рьскъ Мєждоусѣтии]
 {{Рѡсїѩ наибол҄ьше гради}}
 
 [[Category:Гради]]
-[[Катигорї:Рѡсї]]
 [[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
 
-]
 
 [[ar:نوفوسيبيرسك]]
 [[be:Горад Навасібірск]]
