*Empty MediaWiki Message*

--- a/Ищислитєл҄ь.mw
+++ b/Ищислитєл҄ь.mw
@@ -1,11 +1,11 @@
-[[Image:IBM Thinkpad R51.jpg|thumb|200px|Нынщьн҄ь носимъ съмѣтател҄ь]]
-[[Image:Computer-aj aj ashton 01.svg|thumb|200px| Нынщьн поставьна съмѣтател образьнъ видъ]]
-'''Съмѣтател҄ь''' ([[англїискъ ѩзыкъ|англїиска]] словесе ''computer'' прѣложениѥ) плирофорїѩ ищишлѥни, приѩти, прѣображени, хранѥни и изложени ѹстрои ѥстъ съгласьно съ прѣжде съставлѥномь алгорѷѳмомь (съмѣтател҄ьскоѭ программоѭ). Бывьшѹ съмѣтател҄ьскы еры начѧлѹ людиѥ дѹмаахѫ ко съмѣтател҄ь главьнъ съмыслъ ищишлѥниѥ, нын дѹмаѭтъ ко ихъ главьнъ съмыслъ ѹправлѥниѥ ѥстъ.
+[[Image:IBM Thinkpad R51.jpg|thumb|200px|Нꙑнꙗщьн҄ь носимъ съмѣтатєл҄ь]]
+[[Image:Computer-aj aj ashton 01.svg|thumb|200px| Нꙑнꙗщьнꙗ поставьна съмѣтатєлꙗ обраꙁьнъ ви́дъ]]
+'''Съмѣтатєл҄ь''' · [[англі́искъ ѩꙁꙑ́къ|англі́иска]] словєсє ''computer'' прѣложєниѥ · плирофорі́ѩ ищишлѥниꙗ · приѩтиꙗ · прѣображєниꙗ · хранѥниꙗ и иꙁложєниꙗ оустрои ѥ́стъ съгласьно съ прѣждє съставлѥномь алгорѷѳмомь · съмѣтател҄ьскоѭ программоѭ · Бꙑвьшоу съмѣтатєл҄ьскꙑ єрꙑ начѧлоу людиѥ доумаахѫ ꙗко съмѣтатєл҄ь гла́вьнъ съмꙑслъ ищишлѥниѥ · нꙑнѣ доумаѭтъ ꙗко ихъ гла́вьнъ съмꙑслъ оуправлѥниѥ ѥ́стъ
 
-== Чѧсти ==
-*[[Процессоръ]].
+== чѧ́сти ==
+*[[Прокєссоръ]].
 *[[Клавїатура]] ради въвода.
-*[[Мониторъ]] ради показа.
+*[[Мониторъ]] ради покаꙁа.
 
 {{commonscat|Computer}}
 [[Category:Ищислител҄ьна технїка]]
