*Empty MediaWiki Message*

--- a/Котъ.mw
+++ b/Котъ.mw
@@ -2,6 +2,7 @@
 '''Ко́тъ''' · и́ли ''дома́щьн҄ь ко́тъ'' и {{lang-la|Fēlis silvestris cātus}} · [[ко́тьска сѣми́|ко́тьскꙑ сѣмиѩ́]] ꙁвѣ́рь ѥ́стъ
 
 == ꙁьри́ та́кожє ==
+{{commonscat|Felis silvestris catus}}
 * [[Дивии ко́тъ]]
 * [[Ль́въ]]
 * [[Рꙑ́сь]]
