*Empty MediaWiki Message*

--- a/Кѷпръ.mw
+++ b/Кѷпръ.mw
@@ -1,17 +1,30 @@
-{{Дрьжава|name = Кѷпръ
+{{Дрьжава|name = Кѵ́пръ Димократі́ꙗ<br/>Κυπριακή Δημοκρατία<br/>Kıbrıs Cumhuriyeti
 | знамѧ= [[Видъ:Flag_of_Cyprus.svg|150px]]
 | знакъ = [[image:Cyprus Coat of Arms.png|80px]]
 | map = LocationCyprus.svg
-| Стольнъ градъ = [[Леѵкѡсї]] 
-| Ѩзыкъ = [[грьчьскъ ѩзыкъ|грьчьскъ]], [[Тѹрчьскъ ѩзыкъ|Тѹрчьскъ]]
+| Стольнъ градъ = [[Лєѵкѡсі́ꙗ]] 
+| Ѩзыкъ = [[грь́чьскъ ѩꙁꙑ́къ|грь́чьскъ]] и [[Тоу́рчьскъ ѩꙁꙑ́къ|тоу́рчьскъ]]
 | Глава = 
 | area =
-| Людии =  771 тысѫщѧ
+| Людии =  771 тꙑсѫщѧ
 | Почѧта = 1960
 }}
-'''Кѷпръ''' ({{lang-el|Κύπρος}}, {{lang-tr|Kıbrıs}})  ѥстъ островъ и дрьжава. [[Тѹрчьскъ ѩзыкъ|Тѹрчьскъ]] и грьчьскъ ѩзыци дрьжавны ѥсте. Стольнъ градъ [[Леѵкѡсї]] ѥстъ. Людии обитаѥтъ 771 тысѫщѧ.
+'''Кѵ́пръ''' и {{lang-el|Κύπρος}} · {{lang-tr|Kıbrıs}} · островъ и дрьжава ѥ́стъ ⁙ Дрьжавꙑ єпі́симьно имѧ '''Кѵ́пръ Димократі́ꙗ''' и {{lang-el|Κυπριακή Δημοκρατία}} · {{lang-tr|Kıbrıs Cumhuriyeti}} · ѥ́стъ ⁙ Тоу́рчьскъ и грь́чьскъ ѩꙁꙑци дрьжавнꙑ ѥстє́ ⁙ Сто́льнъ гра́дъ [[Лєѵкѡсі́ꙗ]] ѥ́стъ ⁙ Люди́и обита́ѥтъ 771 тꙑсѫщѧ
+
+== їсторі́ꙗ ==
+
+Кѵ́пръ своѭ самостоꙗтѣль авилъ отъ Вєликꙑѩ Британі́ѩ 1960 лѣта ѥ́стъ · нъ [[Акрѡти́рь и Дєкє́лєꙗ]]  и нꙑнѣ британьскꙑ ѥстє́ ⁙ 2004 лѣ́та Кѵ́пръ въшєлъ въ съставъ Єѵрѡ́пьска съвѫꙁа бѣ 
+
+== Кѵ́пра чѧ́сти ==
+Кѵ́пръ на 6 єпархі́ѩ дєлєнъ ѥ́стъ
+# Лєѵкѡсі́ꙗ
+# Аммо́хѡстъ
+# Кєрѵ́нєꙗ
+# Ла́рнака
+# Лє́мєсъ
+# Па́фосъ
 {{commonscat|Cyprus}}
-[[Category:Страны]]
+[[Category:Дрьжа́вꙑ]]
 
 {{Link FA|lmo}}
 {{Link FA|sr}}
