*Empty MediaWiki Message*

--- a/Башкортьскъ_ѩꙁꙑкъ.mw
+++ b/Башкортьскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-'''Башкортьскъ ѩзыкъ''' [[Башъкортостанъ|Башкортостанѹ]] димократїѩ главьнъ ѩзыкъ ѥстъ. Симъ ѩзыкомъ 1,4 лѡдръ людии глаголѣтъ.
+'''Башкортьскъ ѩꙁꙑкъ''' [[Башъкортостанъ|Башкортостанѹ]] димократїѩ главьнъ ѩꙁꙑкъ ѥстъ. Симъ ѩꙁꙑкомъ 1,4 лѡдръ людии глаголѣтъ.
 
 ==Башкортьска [[азъбѹкы]]==
 
@@ -10,7 +10,7 @@
 Ғғ
 Дд
 Ҙҙ
-Ее
+Еє
 Ии
 Йй
 Кк
@@ -35,14 +35,14 @@
 Шш
 Щщ
 Ъъ
-Ыы
+Ыꙑ
 Ьь
 Ээ
 Юю
 Яя
 </div>
 
-== Зьри такожде ==
+== ꙁьри такождє ==
 
 * [[Тата́рьскъ ѩꙁꙑ́къ]]
 
