*Empty MediaWiki Message*

--- a/Растовъ.mw
+++ b/Растовъ.mw
@@ -1,13 +1,12 @@
 {{Градъ|Имѧ = Растовъ
 | знамѧ= Flag of Rostov (Yaroslavl oblast).png
 | знакъ = Coat of Arms of Rostov (Yaroslavl oblast).png
-| Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
-| Глава = 
-| Людии =  33,6 тысѫщь
-| Основанъ = 
+| Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсїꙗ
+| Глава =
+| Людии = 33,6 тꙑсѫщь
+| Основанъ =
 | Харта =
 |}}
-'''Растовъ''' ([[рѹсьскъ ѩзыкъ|рѹсьскы]] ''Ростов'') [[Рѡсї|Рѡсїѩ]] [[рославл҄ьска область|рославл҄ьскы]] области [[Растовьска чѧсть|Растовьскы]] чѧсти главьныи градъ ѥстъ. Людии 33,6 тысѫщь сѫтъ (2005). Градъ ѥзера [[Неро|Нера]] брѣѕѣ лежитъ. Растовъ Рѡсїѩ ѥдинъ и старѣишиихъ градъ ѥстъ, иже Рѡсїи иногда Великыи нарицаѭтъ, да не съмѣшати съ [[Растовъ на Донѣ|Растова на Донѣ]] именьмь.
+'''Растовъ''' и {{lang-ru|Ростов}} · [[Рѡсї|Рѡсїѩ]] [[Ꙗрославл҄ьска область|Ꙗрославл҄ьскꙑ]] области [[Растовьска чѧсть|Растовьскꙑ]] чѧсти главьнꙑи градъ ѥстъ. Людии 33,6 тꙑсѫщь сѫтъ (2005). Градъ ѥꙁєра [[Неро|Нєра]] брѣꙃѣ лєжитъ. Растовъ Рѡсїѩ ѥдинъ и старѣишиихъ градъ ѥстъ, ижє Рѡсїи иногда Вєликꙑи нарицаѭтъ, да нє съмѣшати съ [[Растовъ на Донѣ|Растова на Донѣ]] имєньмь.
 
-[[Катигорї:Гради]]
-[[Катигорї:Рѡсї]]
+[[Катигорі́ꙗ:Рѡсі́ѩ гра́ди]]
