*Empty MediaWiki Message*

--- a/Словѣньскъ_ѩꙁꙑкъ.mw
+++ b/Словѣньскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-[[Image:ZografskiyKodeks.png|thumb|right|250px|пьса́нꙑ [[словѣ́ньска а́зъбоукы|кѷри́лловицєѭ]] Ꙁогра́фьскꙑ къни́гꙑ]]
+[[Дѣ́ло:ZografskiyKodeks.png|thumb|right|250px|пьса́нꙑ [[словѣ́ньска а́зъбоукы|кѷри́лловицєѭ]] Ꙁогра́фьскꙑ къни́гꙑ]]
 '''Словѣ́ньскъ ѩꙁꙑ́къ''' сѧ къ їндоєѵрѡ́пьска дрѣвєсє словѣ́ньска вѣ́твиꙗ южнословѣ́ньсцѣ вѣ́тви оноситъ ⁙ нꙑ́нѣ словѣ́ньскъ мрь́твъ ѩꙁꙑ́къ ѥ́стъ
 == їсторі́ꙗ ==
 
@@ -6,12 +6,12 @@
 
 Словѣ́ньскъ ѩꙁꙑ́къ по врѣ́мєнє сѧ подъ съврѣмє́ньнъ словѣ́нъ рѣ́чиѭ мѣнꙗ́лъ ѥ́стъ · ѥ́жє къ нꙑ́нѣшьню [[црькъвьнословѣ́ньскъ ѩꙁꙑ́къ|црькъвьнословѣ́ньскоу]] ѩꙁꙑкоу́ привєдє́
 
-==ꙁьри́ та́кождє== 
-*[[словѣ́ньска а́ꙁъбоукꙑ]]
-*[http://www.schaeken.nl/lu/research/online/editions/kievfol.html ри́мьска мьша́ рєко́мꙑѩ кꙑ́ѥвьскꙑ къни́гꙑ]
-*[http://ksana-k.narod.ru/djvu/slavdic/index.htm словѣ́ньскъ роу́сьскъ и чє́шьскъ аꙁъбоукъ́вьникъ]
-*[http://amdf.pp.ru/djvu/starslav.djvu словѣ́ньскаѥго ѩꙁꙑка́ оучє́на къни́га]
-*[http://www.utexas.edu/cola/centers/lrc/eieol/ocsol-BF-X.html словѣ́ньскаѥго ѩꙁꙑка́ оучє́ниꙗ]
+==ꙁьри́ та́кождє==
+* [[словѣ́ньска а́ꙁъбоукꙑ]]
+* [http://www.schaeken.nl/lu/research/online/editions/kievfol.html ри́мьска мьша́ рєко́мꙑѩ кꙑ́ѥвьскꙑ къни́гꙑ]
+* [http://ksana-k.narod.ru/djvu/slavdic/index.htm словѣ́ньскъ роу́сьскъ и чє́шьскъ аꙁъбоукъ́вьникъ]
+* [http://amdf.pp.ru/djvu/starslav.djvu словѣ́ньскаѥго ѩꙁꙑка́ оучє́на къни́га]
+* [http://www.utexas.edu/cola/centers/lrc/eieol/ocsol-BF-X.html словѣ́ньскаѥго ѩꙁꙑка́ оучє́ниꙗ]
 
 [[Category:Словѣ́ньскъ ѩꙁꙑ́къ]]
 
