--- a/Вътора_словѣньска_аꙁъбоукꙑ.mw
+++ b/Вътора_словѣньска_аꙁъбоукꙑ.mw
@@ -1,10 +1,10 @@
-'''Климє́нтовица''' вътора́ꙗ по кѷри́лловицѣ [[словѣ́ньска а́ꙁъбоукꙑ]] ѥ́стъ ⁙ наꙁъванаꙗ [[Климє́нтъ Охрїдьскꙑи|Климє́нта Охрїдьска]] имєнь́мь · ѩꙁꙑковѣ́дъ помꙑшлѥ́ниѥ бо ѥ́стъ · ѥжє а́ꙁъбоукъвь и́мьжє сътворѥна́ бѣ́ 
+'''Климє́нтовица''' вътора́ꙗ по кѷри́лловицѣ [[словѣ́ньска а́ꙁъбоукꙑ]] ѥ́стъ ⁙ наꙁъванаꙗ [[Климє́нтъ Охрїдьскꙑи|Климє́нта Охрїдьска]] имєнь́мь · ѩꙁꙑковѣ́дъ помꙑшлѥ́ниѥ бо ѥ́стъ · ѥжє а́ꙁъбоукъвь и́мьжє сътворѥна́ бѣ́
 
 == їсторі́ꙗ ==
-[[Видъ:Azbuka 1574 by Ivan Fyodorov.jpg|thumb|Климє́нтовицѧ роу́сьскъ иꙁво́дъ (1574)]]
+[[Дѣ́ло:Azbuka 1574 by Ivan Fyodorov.jpg|thumb|Климє́нтовицѧ роу́сьскъ иꙁво́дъ (1574)]]
 Климє́нтовица сътворѥна́ ѳ҃ вѣ́цѣ грь́чьскꙑ а́ꙁъбоукъвє осно́вѣ съ боу́къвь доложє́ниѥмь бѣ ⁙ дрє́вл҄ьнꙗѥ [[Напьсаниѥ Самоуилоу|напьса́ниѥ]] климє́нтовицєѭ гро́бѣ блъга́рьска цѣ́сарꙗ [[Самоилъ|Самоуи́ла]] сътворєно́ ѥ́стъ
 
-Климєнтовицѧ основѣ дрєвл҄ьнꙗ [[блъга́рьскъ ѩꙁꙑ́къ|блъга́рьска]] ѩꙁꙑка · дрєвл҄ьнꙗ [[срь́бьскъ ѩꙁꙑ́къ|срь́бьска]] ѩꙁꙑка ·  [[Дрє́вл҄ьн҄ь роу́сьскъ ѩꙁꙑ́къ|дрє́вл҄ьнꙗ роу́сьска]] ѩꙁꙑка́ сътворѥнꙑ бѣ  ·   ѥѭжє давѣ писали [[роумꙑ́ньскъ ѩꙁꙑ́къ|роумꙑ́ньскꙑ]]  и [[молдовьскъ ѩꙁꙑкъ|молдовьскꙑ]] бѣашѧ ⁙ А́ꙁъбоукъвъ съставъ врѣмєньмь сѧ подъ съврѣмєньнъ народъ рѣчиѭ мѣнꙗашє  ·   нъ орѳграфі́ꙗ и напьсаниꙗ ви́дъ ѥдьна бѣашєтє
+Климєнтовицѧ основѣ дрєвл҄ьнꙗ [[блъга́рьскъ ѩꙁꙑ́къ|блъга́рьска]] ѩꙁꙑка · дрєвл҄ьнꙗ [[срь́бьскъ ѩꙁꙑ́къ|срь́бьска]] ѩꙁꙑка · [[Дрє́вл҄ьн҄ь роу́сьскъ ѩꙁꙑ́къ|дрє́вл҄ьнꙗ роу́сьска]] ѩꙁꙑка́ сътворѥнꙑ бѣ · ѥѭжє давѣ писали [[роумꙑ́ньскъ ѩꙁꙑ́къ|роумꙑ́ньскꙑ]] и [[молдовьскъ ѩꙁꙑкъ|молдовьскꙑ]] бѣашѧ ⁙ А́ꙁъбоукъвъ съставъ врѣмєньмь сѧ подъ съврѣмєньнъ народъ рѣчиѭ мѣнꙗашє · нъ орѳграфі́ꙗ и напьсаниꙗ ви́дъ ѥдьна бѣашєтє
 
 Климє́нтовицѧ основѣ сътворѥна Рѡсі́искомь цѣсарѥмь [[Пє́тръ Вєли́кꙑи|Пєтро́мь А҃]] роу́сьска [[гражда́ньска а́ꙁъбоукꙑ|гражда́ньска а́ꙁъбоукъвь]] бѣ ⁙ Таждє основѣ мъно́гъ нꙑнѣщьн҄ь а́ꙁъбоукъвъ лєжитъ ⁙ климє́нтовица и роу́сьскаꙗ гражда́ньска аꙁъбоукꙑ обꙑчьнѣ нє раꙁдѣлꙗѥмѣ ѥ́стє · мꙑслимѣи ꙗ́ко вътораꙗ прьвꙑѩ о́браꙁъ ѥ́стъ · тъкъмо нꙑнѣщьн҄ь
 
@@ -14,146 +14,146 @@
 
 {|class="standard" style="text-align:center;"
 |-
-!Боу́кꙑ!!<small>Напьса́ниꙗ<br>видъ</small>!!Чисмєна́!!Чьтє́ниѥ!!И́мѧ!!<small>Гражда́ньска<br>а́ꙁъбоукꙑ</small>
+!Боу́кꙑ!!<small>Напьса́ниꙗ<br />видъ</small>!!Чисмєна́!!Чьтє́ниѥ!!И́мѧ!!<small>Гражда́ньска<br />а́ꙁъбоукꙑ</small>
 |-
-|А||[[Видъ:Early Cyrillic letter Azu.png|30px]]||1|| /a/ ||аꙁъ||{{lat-ga|А}}
+|А||[[Дѣ́ло:Early Cyrillic letter Azu.png|30px]]||1|| /a/ ||аꙁъ||{{lat-ga|А}}
 |-
-|Б||[[Видъ:Early Cyrillic letter Buky.png|30px]]|| || /b/ ||боукꙑ||{{lat-ga|Б}}
+|Б||[[Дѣ́ло:Early Cyrillic letter Buky.png|30px]]|| || /b/ ||боукꙑ||{{lat-ga|Б}}
 |-
-|В||[[Видъ:Early Cyrillic letter Viedi.png|30px]]||2|| /v/, /w/ ||вѣдѣ||{{lat-ga|В}}
+|В||[[Дѣ́ло:Early Cyrillic letter Viedi.png|30px]]||2|| /v/, /w/ ||вѣдѣ||{{lat-ga|В}}
 |-
-|Г||[[Видъ:Early Cyrillic letter Glagoli.png|30px]]||3|| /g/ ||глаголи||{{lat-ga|Г}}
+|Г||[[Дѣ́ло:Early Cyrillic letter Glagoli.png|30px]]||3|| /g/ ||глаголи||{{lat-ga|Г}}
 |-
-|Д||[[Видъ:Early Cyrillic letter Dobro.png|30px]]||4|| /d/ ||добро||{{lat-ga|Д}}
+|Д||[[Дѣ́ло:Early Cyrillic letter Dobro.png|30px]]||4|| /d/ ||добро||{{lat-ga|Д}}
 |-
-|Є||[[Видъ:Early Cyrillic letter Yesti.png|30px]]||5|| /e/ ||ѥстъ||{{lat-ga|Е}}/{{lat-ga|Є}}
+|Є||[[Дѣ́ло:Early Cyrillic letter Yesti.png|30px]]||5|| /e/ ||ѥстъ||{{lat-ga|Е}}/{{lat-ga|Є}}
 |-
-|Ж||[[Видъ:Early Cyrillic letter Zhiviete.png|30px]]|| || /žʲ/ ||живѣтє||{{lat-ga|Ж}}
+|Ж||[[Дѣ́ло:Early Cyrillic letter Zhiviete.png|30px]]|| || /žʲ/ ||живѣтє||{{lat-ga|Ж}}
 |-
-|Ꙃ||[[Видъ:Early Cyrillic letter Dzelo.png|30px]]||6|| /ʣʲ/ ||ꙃѣло||{{lat-ga|Ѕ}}
+|Ꙃ||[[Дѣ́ло:Early Cyrillic letter Dzelo.png|30px]]||6|| /ʣʲ/ ||ꙃѣло||{{lat-ga|Ѕ}}
 |-
-|Ꙁ||[[Видъ:Early Cyrillic letter Zemlia.png|40px]]||7|| /z/ ||ꙁємлꙗ||{{lat-ga|З}}
+|Ꙁ||[[Дѣ́ло:Early Cyrillic letter Zemlia.png|40px]]||7|| /z/ ||ꙁємлꙗ||{{lat-ga|З}}
 |-
-|И||[[Видъ:Early Cyrillic letter Izhe.png|30px]]||8|| /i/ ||ижє||{{lat-ga|И}}
+|И||[[Дѣ́ло:Early Cyrillic letter Izhe.png|30px]]||8|| /i/ ||ижє||{{lat-ga|И}}
 |-
-|І||[[Видъ:Early Cyrillic letter I.png|30px]]||10|| /i/ ||і||{{lat-ga|І}}
+|І||[[Дѣ́ло:Early Cyrillic letter I.png|30px]]||10|| /i/ ||і||{{lat-ga|І}}
 |-
-|К||[[Видъ:Early Cyrillic letter Kako.png|30px]]||20|| /k/ ||како||{{lat-ga|К}}
+|К||[[Дѣ́ло:Early Cyrillic letter Kako.png|30px]]||20|| /k/ ||како||{{lat-ga|К}}
 |-
-|Л||[[Видъ:Early Cyrillic letter Liudiye.png|30px]]||30|| /l/ ||людиѥ||{{lat-ga|Л}}
+|Л||[[Дѣ́ло:Early Cyrillic letter Liudiye.png|30px]]||30|| /l/ ||людиѥ||{{lat-ga|Л}}
 |-
-|М||[[Видъ:Early Cyrillic letter Myslite.png|30px]]||40|| /m/ ||мꙑслитє||{{lat-ga|М}}
+|М||[[Дѣ́ло:Early Cyrillic letter Myslite.png|30px]]||40|| /m/ ||мꙑслитє||{{lat-ga|М}}
 |-
-|Н||[[Видъ:Early Cyrillic letter Nashi.png|30px]]||50|| /n/ ||нашъ||{{lat-ga|Н}}
+|Н||[[Дѣ́ло:Early Cyrillic letter Nashi.png|30px]]||50|| /n/ ||нашъ||{{lat-ga|Н}}
 |-
-|О||[[Видъ:Early Cyrillic letter Onu.png|30px]]||70|| /o/ ||онъ||{{lat-ga|О}}
+|О||[[Дѣ́ло:Early Cyrillic letter Onu.png|30px]]||70|| /o/ ||онъ||{{lat-ga|О}}
 |-
-|П||[[Видъ:Early Cyrillic letter Pokoi.png|30px]]||80|| /p/ ||покои||{{lat-ga|П}}
+|П||[[Дѣ́ло:Early Cyrillic letter Pokoi.png|30px]]||80|| /p/ ||покои||{{lat-ga|П}}
 |-
-|Р||[[Видъ:Early Cyrillic letter Ritsi.png|30px]]||100|| /r/ ||рьци||{{lat-ga|Р}}
+|Р||[[Дѣ́ло:Early Cyrillic letter Ritsi.png|30px]]||100|| /r/ ||рьци||{{lat-ga|Р}}
 |-
-|С||[[Видъ:Early Cyrillic letter Slovo.png|30px]]||200|| /s/ ||слово||{{lat-ga|С}}
+|С||[[Дѣ́ло:Early Cyrillic letter Slovo.png|30px]]||200|| /s/ ||слово||{{lat-ga|С}}
 |-
-|Т||[[Видъ:Early Cyrillic letter Tvrido.png|30px]]||300|| /t/ ||твьрдо||{{lat-ga|Т}}
+|Т||[[Дѣ́ло:Early Cyrillic letter Tvrido.png|30px]]||300|| /t/ ||твьрдо||{{lat-ga|Т}}
 |-
-|Оу ||[[Видъ:Early Cyrillic letter Uku.png|40px]]||(400)|| /u/ ||оукъ||{{lat-ga|У}}
+|Оу ||[[Дѣ́ло:Early Cyrillic letter Uku.png|40px]]||(400)|| /u/ ||оукъ||{{lat-ga|У}}
 |-
-|Ф||[[Видъ:Early Cyrillic letter Fritu.png|30px]]||500|| /f/ ||фрьтъ||{{lat-ga|Ф}}
+|Ф||[[Дѣ́ло:Early Cyrillic letter Fritu.png|30px]]||500|| /f/ ||фрьтъ||{{lat-ga|Ф}}
 |-
-|Х||[[Видъ:Early Cyrillic letter Khieru.png|30px]]||600|| /x/ ||хѣръ||{{lat-ga|Х}}
+|Х||[[Дѣ́ло:Early Cyrillic letter Khieru.png|30px]]||600|| /x/ ||хѣръ||{{lat-ga|Х}}
 |-
-|Ѡ||[[Видъ:Early Cyrillic letter Otu.png|40px]]||800|| /o/ ||ѡмєга||{{lat-ga|—}}
+|Ѡ||[[Дѣ́ло:Early Cyrillic letter Otu.png|40px]]||800|| /o/ ||ѡмєга||{{lat-ga|—}}
 |-
-|Ц||[[Видъ:Early Cyrillic letter Tsi.png|40px]]||900|| /ʦʲ/ ||ци||{{lat-ga|Ц}}
+|Ц||[[Дѣ́ло:Early Cyrillic letter Tsi.png|40px]]||900|| /ʦʲ/ ||ци||{{lat-ga|Ц}}
 |-
-|Ч||[[Видъ:Early Cyrillic letter Chrivi.png|40px]]||90|| /ʧʲ/ ||чрьвь||{{lat-ga|Ч}}
+|Ч||[[Дѣ́ло:Early Cyrillic letter Chrivi.png|40px]]||90|| /ʧʲ/ ||чрьвь||{{lat-ga|Ч}}
 |-
-|Ш||[[Видъ:Early Cyrillic letter Sha.png|30px]]|| || /ʃʲ/ ||ша||{{lat-ga|Ш}}
+|Ш||[[Дѣ́ло:Early Cyrillic letter Sha.png|30px]]|| || /ʃʲ/ ||ша||{{lat-ga|Ш}}
 |-
-|Щ||[[Видъ:Early Cyrillic letter Shta.png|30px]]|| || /ʃtʲ/ ||ща||{{lat-ga|Щ}}
+|Щ||[[Дѣ́ло:Early Cyrillic letter Shta.png|30px]]|| || /ʃtʲ/ ||ща||{{lat-ga|Щ}}
 |-
-|Ъ||[[Видъ:Early Cyrillic letter Yeru.png|30px]]|| || /ɯ̆/ ||ѥръ||{{lat-ga|Ъ}}
+|Ъ||[[Дѣ́ло:Early Cyrillic letter Yeru.png|30px]]|| || /ɯ̆/ ||ѥръ||{{lat-ga|Ъ}}
 |-
-|Ꙑ||[[Видъ:Early Cyrillic letter Yery.png|30px]]|| || /ɯ/ ||ѥрꙑ||{{lat-ga|Ы}}
+|Ꙑ||[[Дѣ́ло:Early Cyrillic letter Yery.png|30px]]|| || /ɯ/ ||ѥрꙑ||{{lat-ga|Ы}}
 |-
-|Ь||[[Видъ:Early Cyrillic letter Yeri.png|30px]]|| || /ĭ/ ||ѥрь||{{lat-ga|Ь}}
+|Ь||[[Дѣ́ло:Early Cyrillic letter Yeri.png|30px]]|| || /ĭ/ ||ѥрь||{{lat-ga|Ь}}
 |-
-|Ѣ||[[Видъ:Early Cyrillic letter Yati.png|30px]]|| || /jæ/ или /ʲæ/ ||ꙗдь||{{lat-ga|Ѣ}}
+|Ѣ||[[Дѣ́ло:Early Cyrillic letter Yati.png|30px]]|| || /jæ/ или /ʲæ/ ||ꙗдь||{{lat-ga|Ѣ}}
 |-
-|Ю||[[Видъ:Early Cyrillic letter Yu.png|30px]]|| || /ju/ или /ʲu/ ||ю||{{lat-ga|Ю}}
+|Ю||[[Дѣ́ло:Early Cyrillic letter Yu.png|30px]]|| || /ju/ или /ʲu/ ||ю||{{lat-ga|Ю}}
 |-
-|Ꙗ||[[Видъ:Early Cyrillic letter Ya.png|30px]]|| || /ja/ или /ʲa/ или равно ѣ ||ꙗ||{{lat-ga|—}}
+|Ꙗ||[[Дѣ́ло:Early Cyrillic letter Ya.png|30px]]|| || /ja/ или /ʲa/ или равно ѣ ||ꙗ||{{lat-ga|—}}
 |-
-|Ѥ||[[Видъ:Early Cyrillic letter Ye.png|30px]]|| || /je/ или /ʲe/ ||ѥ||{{lat-ga|—}}
+|Ѥ||[[Дѣ́ло:Early Cyrillic letter Ye.png|30px]]|| || /je/ или /ʲe/ ||ѥ||{{lat-ga|—}}
 |-
-|Ѧ||[[Видъ:Early Cyrillic letter Yusu Maliy.png|30px]]||(900)|| /ẽ/ ||ѭсъ малъ||{{lat-ga|Я}}
+|Ѧ||[[Дѣ́ло:Early Cyrillic letter Yusu Maliy.png|30px]]||(900)|| /ẽ/ ||ѭсъ малъ||{{lat-ga|Я}}
 |-
-|Ѫ||[[Видъ:Early Cyrillic letter Yusu Bolshiy.png|30px]]|| || /õ/ ||ѭсъ вєликъ||{{lat-ga|—}}
+|Ѫ||[[Дѣ́ло:Early Cyrillic letter Yusu Bolshiy.png|30px]]|| || /õ/ ||ѭсъ вєликъ||{{lat-ga|—}}
 |-
-|Ѩ||[[Видъ:Early Cyrillic letter Yusu Maliy Yotirovaniy.png|30px]]|| ||/jẽ/ или /ʲẽ/ || ||{{lat-ga|—}}
+|Ѩ||[[Дѣ́ло:Early Cyrillic letter Yusu Maliy Yotirovaniy.png|30px]]|| ||/jẽ/ или /ʲẽ/ || ||{{lat-ga|—}}
 |-
-|Ѭ||[[Видъ:Early Cyrillic letter Yusu Bolshiy Yotirovaniy.png|30px]]|| ||/jõ/ или /ʲõ/ || ||{{lat-ga|—}}
+|Ѭ||[[Дѣ́ло:Early Cyrillic letter Yusu Bolshiy Yotirovaniy.png|30px]]|| ||/jõ/ или /ʲõ/ || ||{{lat-ga|—}}
 |-
-|Ѯ||[[Видъ:Early Cyrillic letter Ksi.png|30px]]||60||[кс] ||ѯі||{{lat-ga|—}}
+|Ѯ||[[Дѣ́ло:Early Cyrillic letter Ksi.png|30px]]||60||[кс] ||ѯі||{{lat-ga|—}}
 |-
-|Ѱ||[[Видъ:Early Cyrillic letter Psi.png|30px]]||700||/ps/ ||ѱі||{{lat-ga|—}}
+|Ѱ||[[Дѣ́ло:Early Cyrillic letter Psi.png|30px]]||700||/ps/ ||ѱі||{{lat-ga|—}}
 |-
-|Ѳ||[[Видъ:Early Cyrillic letter Fita.png|30px]]||9|| /θ/ или /f/ ||ѳита||{{lat-ga|Ѳ}} 
+|Ѳ||[[Дѣ́ло:Early Cyrillic letter Fita.png|30px]]||9|| /θ/ или /f/ ||ѳита||{{lat-ga|Ѳ}}
 |-
-|Ѵ, Ѷ||[[Видъ:Early Cyrillic letter Izhitsa.png|30px]]||400|| /v/ и /w/ или /i/ ||ѵкъ||{{lat-ga|Ѵ}}
+|Ѵ, Ѷ||[[Дѣ́ло:Early Cyrillic letter Izhitsa.png|30px]]||400|| /v/ и /w/ или /i/ ||ѵкъ||{{lat-ga|Ѵ}}
 |-
-|Ҁ||[[Видъ:Early Cyrillic letter Koppa.png|30px]]||90||   || ||{{lat-ga|—}}
+|Ҁ||[[Дѣ́ло:Early Cyrillic letter Koppa.png|30px]]||90|| || ||{{lat-ga|—}}
 |}
 
 == Климє́нтовица Юнико́дѣ ==
-[[Юнико́дъ|Юнико́дѣ]] Климє́нтовица и Гражда́ньска а́ꙁъбоукꙑ нє раꙁдѣлѥнѣ́ ѥ́стє · того́ дѣл҄ьма́ с҄ьдє́ дано́ Климє́нтовицѧ и гражда́ньскꙑѩ а́ꙁъбоукъвє обьщє та́влїѥ ѥ́стъ ⁙ о́браꙁа 5.1 новѣ юнико́дѣ конь́ць вьсѩ́ Климє́нтовицѧ ноу́ждьнꙑ боу́къви авлѥнꙑ сѫ́тъ 
+[[Юнико́дъ|Юнико́дѣ]] Климє́нтовица и Гражда́ньска а́ꙁъбоукꙑ нє раꙁдѣлѥнѣ́ ѥ́стє · того́ дѣл҄ьма́ с҄ьдє́ дано́ Климє́нтовицѧ и гражда́ньскꙑѩ а́ꙁъбоукъвє обьщє та́влїѥ ѥ́стъ ⁙ о́браꙁа 5.1 новѣ юнико́дѣ конь́ць вьсѩ́ Климє́нтовицѧ ноу́ждьнꙑ боу́къви авлѥнꙑ сѫ́тъ
 
-Боу́къвъ рѧ́дъ ка́ꙁанъ съгла́сьно съ Юнико́да пѧ́тꙑимь (5.0) о́браꙁомь ѥ́стъ 
-{| class="Unicode" cellSpacing="1" cellPadding="1" border="1" style="text-align:center; font-size:120%" 
+Боу́къвъ рѧ́дъ ка́ꙁанъ съгла́сьно съ Юнико́да пѧ́тꙑимь (5.0) о́браꙁомь ѥ́стъ
+{| class="Unicode" cellSpacing="1" cellPadding="1" border="1" style="text-align:center; font-size:120%"
 |- style="font-family:inherit;font-weight:normal;" align="center"
 |&nbsp;||&nbsp;||<code>0</code>||<code>1</code>||<code>2</code>||<code>3</code>||<code>4</code>||<code>5</code>||<code>6</code>||<code>7</code>||<code>8</code>||<code>9</code>||<code>A</code>||<code>B</code>||<code>C</code>||<code>D</code>||<code>E</code>||<code>F</code>
 |- align="center"
-|<code>400</code>||&nbsp;||&#1024;||&#1025;||&#1026;||&#1027;||&#1028;||&#1029;||&#1030;||&#1031;||&#1032;||&#1033;||&#1034;||&#1035;||&#1036;||&#1037;||&#1038;||&#1039;
+|<code>400</code>||&nbsp;||Ѐ||Ё||Ђ||Ѓ||Є||ꙃ||І||Ї||Ј||Љ||Њ||Ћ||Ќ||Ѝ||Ў||Џ
 |- align="center"
-|<code>410</code>||&nbsp;||&#1040;||&#1041;||&#1042;||&#1043;||&#1044;||&#1045;||&#1046;||&#1047;||&#1048;||&#1049;||&#1050;||&#1051;||&#1052;||&#1053;||&#1054;||&#1055;
+|<code>410</code>||&nbsp;||А||Б||В||Г||Д||є||Ж||ꙁ||И||Й||К||Л||М||Н||О||П
 |- align="center"
-|<code>420</code>||&nbsp;||&#1056;||&#1057;||&#1058;||&#1059;||&#1060;||&#1061;||&#1062;||&#1063;||&#1064;||&#1065;||&#1066;||&#1067;||&#1068;||&#1069;||&#1070;||&#1071;
+|<code>420</code>||&nbsp;||Р||С||Т||У||Ф||Х||Ц||Ч||Ш||Щ||Ъ||ꙑ||Ь||Э||Ю||Я
 |- align="center"
-|<code>430</code>||&nbsp;||&#1072;||&#1073;||&#1074;||&#1075;||&#1076;||&#1077;||&#1078;||&#1079;||&#1080;||&#1081;||&#1082;||&#1083;||&#1084;||&#1085;||&#1086;||&#1087;
+|<code>430</code>||&nbsp;||а||б||в||г||д||є||ж||ꙁ||и||й||к||л||м||н||о||п
 |- align="center"
-|<code>440</code>||&nbsp;||&#1088;||&#1089;||&#1090;||&#1091;||&#1092;||&#1093;||&#1094;||&#1095;||&#1096;||&#1097;||&#1098;||&#1099;||&#1100;||&#1101;||&#1102;||&#1103;
+|<code>440</code>||&nbsp;||р||с||т||у||ф||х||ц||ч||ш||щ||ъ||ꙑ||ь||э||ю||я
 |- align="center"
-|<code>450</code>||&nbsp;||&#1104;||&#1105;||&#1106;||&#1107;||&#1108;||&#1109;||&#1110;||&#1111;||&#1112;||&#1113;||&#1114;||&#1115;||&#1116;||&#1117;||&#1118;||&#1119;
+|<code>450</code>||&nbsp;||ѐ||ё||ђ||ѓ||є||ꙃ||і||ї||ј||љ||њ||ћ||ќ||ѝ||ў||џ
 |- align="center"
-|<code>460</code>||&nbsp;||&#1120;||&#1121;||&#1122;||&#1123;||&#1124;||&#1125;||&#1126;||&#1127;||&#1128;||&#1129;||&#1130;||&#1131;||&#1132;||&#1133;||&#1134;||&#1135;
+|<code>460</code>||&nbsp;||Ѡ||ѡ||Ѣ||ѣ||Ѥ||ѥ||Ѧ||ѧ||Ѩ||ѩ||Ѫ||ѫ||Ѭ||ѭ||Ѯ||ѯ
 |- align="center"
-|<code>470</code>||&nbsp;||&#1136;||&#1137;||&#1138;||&#1139;||&#1140;||&#1141;||&#1142;||&#1143;||&#1144;||&#1145;||&#1146;||&#1147;||&#1148;||&#1149;||&#1150;||&#1151;
+|<code>470</code>||&nbsp;||Ѱ||ѱ||Ѳ||ѳ||Ѵ||ѵ||Ѷ||ѷ||Оу||оу||Ѻ||ѻ||Ѽ||ѽ||Ѿ||ѿ
 |- align="center"
-|<code>480</code>||&nbsp;||&#1152;||&#1153;||&#1154;||&#1155;||&#1156;||&#1157;||&#1158;||||&nbsp;&nbsp;&#1160;||&nbsp;&nbsp;&#1161;||&#1162;||&#1163;||&#1164;||&#1165;||&#1166;||&#1167;
+|<code>480</code>||&nbsp;||Ҁ||ҁ||҂||҃||҄||҅||҆||||&nbsp;&nbsp;҈||&nbsp;&nbsp;҉||Ҋ||ҋ||Ҍ||ҍ||Ҏ||ҏ
 |- align="center"
-|<code>490</code>||&nbsp;||&#1168;||&#1169;||&#1170;||&#1171;||&#1172;||&#1173;||&#1174;||&#1175;||&#1176;||&#1177;||&#1178;||&#1179;||&#1180;||&#1181;||&#1182;||&#1183;
+|<code>490</code>||&nbsp;||Ґ||ґ||Ғ||ғ||Ҕ||ҕ||Җ||җ||Ҙ||ҙ||Қ||қ||Ҝ||ҝ||Ҟ||ҟ
 |- align="center"
-|<code>4A0</code>||&nbsp;||&#1184;||&#1185;||&#1186;||&#1187;||&#1188;||&#1189;||&#1190;||&#1191;||&#1192;||&#1193;||&#1194;||&#1195;||&#1196;||&#1197;||&#1198;||&#1199;
+|<code>4A0</code>||&nbsp;||Ҡ||ҡ||Ң||ң||Ҥ||ҥ||Ҧ||ҧ||Ҩ||ҩ||Ҫ||ҫ||Ҭ||ҭ||Ү||ү
 |- align="center"
-|<code>4B0</code>||&nbsp;||&#1200;||&#1201;||&#1202;||&#1203;||&#1204;||&#1205;||&#1206;||&#1207;||&#1208;||&#1209;||&#1210;||&#1211;||&#1212;||&#1213;||&#1214;||&#1215;
+|<code>4B0</code>||&nbsp;||Ұ||ұ||Ҳ||ҳ||Ҵ||ҵ||Ҷ||ҷ||Ҹ||ҹ||Һ||һ||Ҽ||ҽ||Ҿ||ҿ
 |- align="center"
-|<code>4C0</code>||&nbsp;||&#1216;||&#1217;||&#1218;||&#1219;||&#1220;||&#1221;||&#1222;||&#1223;||&#1224;||&#1225;||&#1226;||&#1227;||&#1228;||&#1229;||&#1230;||&#1231;
+|<code>4C0</code>||&nbsp;||Ӏ||Ӂ||ӂ||Ӄ||ӄ||Ӆ||ӆ||Ӈ||ӈ||Ӊ||ӊ||Ӌ||ӌ||Ӎ||ӎ||ӏ
 |- align="center"
-|<code>4D0</code>||&nbsp;||&#1232;||&#1233;||&#1234;||&#1235;||&#1236;||&#1237;||&#1238;||&#1239;||&#1240;||&#1241;||&#1242;||&#1243;||&#1244;||&#1245;||&#1246;||&#1247;
+|<code>4D0</code>||&nbsp;||Ӑ||ӑ||Ӓ||ӓ||Ӕ||ӕ||Ӗ||ӗ||Ә||ә||Ӛ||ӛ||Ӝ||ӝ||Ӟ||ӟ
 |- align="center"
-|<code>4E0</code>||&nbsp;||&#1248;||&#1249;||&#1250;||&#1251;||&#1252;||&#1253;||&#1254;||&#1255;||&#1256;||&#1257;||&#1258;||&#1259;||&#1260;||&#1261;||&#1262;||&#1263;
+|<code>4E0</code>||&nbsp;||Ӡ||ӡ||Ӣ||ӣ||Ӥ||ӥ||Ӧ||ӧ||Ө||ө||Ӫ||ӫ||Ӭ||ӭ||Ӯ||ӯ
 |- align="center"
-|<code>4F0</code>||&nbsp;||&#1264;||&#1265;||&#1266;||&#1267;||&#1268;||&#1269;||&#1270;||&#1271;||&#1272;||&#1273;||&#1274;||&#1275;||&#1276;||&#1277;||&#1278;||&#1279;
+|<code>4F0</code>||&nbsp;||Ӱ||ӱ||Ӳ||ӳ||Ӵ||ӵ||Ӷ||ӷ||Ӹ||ӹ||Ӻ||ӻ||Ӽ||ӽ||Ӿ||ӿ
 |- align="center"
-|<code>500</code>||&nbsp;||&#1280;||&#1281;||&#1282;||&#1283;||&#1284;||&#1285;||&#1286;||&#1287;||&#1288;||&#1289;||&#1290;||&#1291;||&#1292;||&#1293;||&#1294;||&#1295;
+|<code>500</code>||&nbsp;||Ԁ||ԁ||Ԃ||ԃ||Ԅ||ԅ||Ԇ||ԇ||Ԉ||ԉ||Ԋ||ԋ||Ԍ||ԍ||Ԏ||ԏ
 |- align="center"
-|<code>510</code>||&nbsp;||&#1296;||&#1297;||&#1298;||&#1299;<!--||&#1300;||&#1301;||&#1302;||&#1303;||&#1304;||&#1305;||&#1306;||&#1307;||&#1308;||&#1309;||&#1310;||&#1311;
+|<code>510</code>||&nbsp;||Ԑ||ԑ||Ԓ||ԓ<!--||&#1300;||&#1301;||&#1302;||&#1303;||&#1304;||&#1305;||&#1306;||&#1307;||&#1308;||&#1309;||&#1310;||&#1311;
 |- align="center"
 |<code>520</code>||&nbsp;||&#1312;||&#1313;||&#1314;||&#1315;||&#1316;||&#1317;||&#1318;||&#1319;||&#1320;||&#1321;||&#1322;||&#1323;||&#1324;||&#1325;||&#1326;||&#1327;-->
 |}
 
 == ꙁьри такождє ==
-* [[Обитѣльско напьсаниѥ]] 
+* [[Обитѣльско напьсаниѥ]]
 [[Category:Словѣньска азъбѹкы]]
 
 [[br:Lizherenneg hengirillek]]
