--- a/Амєрїканьскꙑ_Ѥдьнѥнꙑ_Дрьжавꙑ.mw
+++ b/Амєрїканьскꙑ_Ѥдьнѥнꙑ_Дрьжавꙑ.mw
@@ -1,16 +1,16 @@
 {{Дрьжава|name =  Амєрика́ньскꙑ Ѥдьнѥнꙑ́ Дрьжа́вꙑ<br>{{lat-ga|United States of America}}
-| знамѧ= [[Видъ:Flag of the United States.svg|150px|border|100px]]
-| знакъ = [[image:US-GreatSeal-Obverse.svg|80px]]
+| ꙁнамѧ= [[Дѣ́ло:Flag of the United States.svg|150px|border|100px]]
+| ꙁнакъ = [[Дѣ́ло:US-GreatSeal-Obverse.svg|80px]]
 | map = United States (orthographic projection).svg
-|Речениѥ =In God We Trust 
+|Рєчєниѥ =In God We Trust
 | Стольнъ градъ = [[Ва́шингтонъ · гра́дъ|Ва́шингтонъ]]
-| Ѩзыкъ = [[англі́искъ ѩꙁꙑ́къ]]
-| Глава = 
+| Ѩꙁꙑкъ = [[англі́искъ ѩꙁꙑ́къ]]
+| Глава =
 | Пространиѥ =9,826,630 к҃м²
 | Людии = 305 лєѡ́дръ
-| Почѧта = 1776 
+| Почѧта = 1776
 }}
-'''Амєрика́ньскꙑ Ѥдьнѥнꙑ́ Дрьжа́вꙑ''' и {{lang-en|United States of America}} или АѤ҃Д и {{lang-en|USA}}  · [[Сѣверьна Амерїка|Сѣ́вєрьнꙑ Амєрїкꙑ]] съвѫꙁьна дрьжа́ва сѫ́тъ ⁙ АѤ҃Д сто́льнъ гра́дъ [[Ва́шингтонъ · гра́дъ|Ва́шингтонъ]] ѥ́стъ ⁙ Дрьжа́вьнъ [[англі́искъ ѩꙁꙑ́къ]] ѥ́стъ ⁙ Люди́и 305 лєѡ́дръ обита́ѥтъ ⁙ Наибол҄ьшии гра́дъ [[Но́въ Ио́ркъ]] ѥстъ
+'''Амєрика́ньскꙑ Ѥдьнѥнꙑ́ Дрьжа́вꙑ''' и {{lang-en|United States of America}} или АѤ҃Д и {{lang-en|USA}} · [[Сѣверьна Амерїка|Сѣ́вєрьнꙑ Амєрїкꙑ]] съвѫꙁьна дрьжа́ва сѫ́тъ ⁙ АѤ҃Д сто́льнъ гра́дъ [[Ва́шингтонъ · гра́дъ|Ва́шингтонъ]] ѥ́стъ ⁙ Дрьжа́вьнъ [[англі́искъ ѩꙁꙑ́къ]] ѥ́стъ ⁙ Люди́и 305 лєѡ́дръ обита́ѥтъ ⁙ Наибол҄ьшии гра́дъ [[Но́въ Ио́ркъ]] ѥстъ
 
 == їсторїꙗ ==
 
