*Empty MediaWiki Message*

--- a/Тєѯасъ.mw
+++ b/Тєѯасъ.mw
@@ -1,4 +1,4 @@
-[[Видъ:Flag of Texas.svg|right|thumb|250px|Тєѯаса ꙁнамѧ]]
+[[Дѣ́ло:Flag of Texas.svg|right|thumb|250px|Тєѯаса ꙁнамѧ]]
 '''Тєѯасъ''' и {{lang-en|Texas}} · дрьжа́ва [[Амєрика́ньскꙑ Ѥдьнѥнꙑ́ Дрьжа́вꙑ|АѤ҃Д]] ѥ́стъ · сто́льнъ гра́дъ ѥѩ [[Остинъ]] ѥ́стъ ⁙ Люди́и обита́ѥтъ Тєѯасѣ 23 лєѡ́дръ.
 
 [[Category:Амєрика́ньскꙑ Ѥдьнѥнꙑ́ Дрьжа́вꙑ]]
