*Empty MediaWiki Message*

--- a/Алєѯандръ_Макєдоньскъ.mw
+++ b/Алєѯандръ_Макєдоньскъ.mw
@@ -1,7 +1,7 @@
-[[Image:AlexanderTheGreat Bust.jpg|thumb|Алеѯандръ Македоньскъ]]
-'''Алеѯандръ Македоньскъ''' ('''Алеѯандръ Г Великъ''', [[Грьчьскъ ѩзыкъ|грьчьскы]]: ''Αλέξανδρος ο Μέγας'';  їѹлї 21 числа 356 лѣта до РХ — їѹнїꙗ 10 числа 323 лѣта до РХ) бѣ цѣсарь [[Македонїꙗ (страна)|Македонїѩ]] съ 336 лѣта до РХ, сынъ македоньска цѣсарꙗ Фїлїппа В.
+[[Дѣ́ло:AlexanderTheGreat Bust.jpg|thumb|Алєѯандръ Макєдоньскъ]]
+'''Алєѯандръ Макєдоньскъ''' ('''Алєѯандръ Г Вєликъ''', [[Грьчьскъ ѩзыкъ|грьчьскꙑ]]: ''Αλέξανδρος ο Μέγας''; їоулїꙗ 21 числа 356 лѣта до РХ — їоунїꙗ 10 числа 323 лѣта до РХ) бѣ цѣсарь [[Македонїꙗ (страна)|Макєдонїѩ]] съ 336 лѣта до РХ, сꙑнъ макєдоньска цѣсарꙗ Фїлїппа В.
 
-Алеѯандръ покори [[Грьци|Грькы]], [[цѣсарьство Персьскоѥ|Персы]] и дрѹгыѩ. Съзьда цѣсарьство великоѥ, коѥго стольнъ градъ бѣ [[Вавѵлѡнъ]]. Се цѣсарьство распада сѧ по съмрьти Алеѯандра.    
+Алєѯандръ покори [[Грьци|Грькꙑ]], [[цѣсарьство Персьскоѥ|Пєрсꙑ]] и дроугꙑѩ. Съꙁьда цѣсарьство вєликоѥ, коѥго стольнъ градъ бѣ [[Вавѵлѡнъ]]. Сє цѣсарьство распада сѧ по съмрьти Алєѯандра.
 {{commonscat|Alexander the Great}}
 
 [[Category:Македоньци]]
