*Empty MediaWiki Message*

--- a/Чєшьско.mw
+++ b/Чєшьско.mw
@@ -1,16 +1,16 @@
 {{Дрьжава|name = Чє́шьско
-| знамѧ= [[Видъ:Flag of the Czech Republic.svg|150px]]
-| знакъ = [[image:Coat of arms of the Czech Republic.svg|80px]]
+| ꙁнамѧ= [[Видъ:Flag of the Czech Republic.svg|150px]]
+| ꙁнакъ = [[image:Coat of arms of the Czech Republic.svg|80px]]
 | map = EU location CZE.png
 | Стольнъ градъ = [[Прага]]
-| Ѩзыкъ = [[Чешьскъ ѩзыкъ|чешьскъ]]
+| Ѩꙁꙑкъ = [[Чешьскъ ѩзыкъ|чешьскъ]]
 | Глава = 
 | area =
 | Людии = 10 леѡдръ
 | Почѧта = 1993
 }}
 
-'''Чє́шьско''' ({{Lang-cu|Чє́си}}, слово «Чє́шьско» чє́шьскаѥго имене прѣложениѥ ѥстъ. {{Lang-cs|Česko}}) срѣдьн҄ии [[Єѵрѡ́па|Єѵрѡ́пѣ]] дрьжава ѥстъ. Стольнъ градъ Чє́хъ [[Прага]] ѥстъ. Чє́шьско съставѣ [[Чешьскословѣньско|Чешьскословѣньсцѣ]] послѣди [[Прьва Свѣтьна Воина|Прьвыѩ Свѣтьныѩ Воины]] въшьла бѣаше. Послѣди распада Чє́шьскословѣньска Чє́шьско стала ѥсть пакы самостотѣльна дрьжава.
+'''Чє́шьско''' ({{Lang-cu|Чє́си}}, слово "Чє́шьско" чє́шьскаѥго имєнє прѣложєниѥ ѥстъ. {{Lang-cs|Česko}}) срѣдьн҄ии [[Єѵрѡ́па|Єѵрѡ́пѣ]] дрьжава ѥстъ. Стольнъ градъ Чє́хъ [[Прага]] ѥстъ. Чє́шьско съставѣ [[Чешьскословѣньско|Чєшьскословѣньсцѣ]] послѣди [[Прьва Свѣтьна Воина|Прьвꙑѩ Свѣтьнꙑѩ Воинꙑ]] въшьла бѣашє. Послѣди распада Чє́шьскословѣньска Чє́шьско стала ѥсть пакꙑ самостоꙗтѣльна дрьжава.
 
 {{Словѣньскы дрьжавы}}
 [[Category:Чє́шьско|*]]
