*Empty MediaWiki Message*

--- a/Чєшьско.mw
+++ b/Чєшьско.mw
@@ -3,7 +3,7 @@
 | ꙁнакъ = [[image:Coat of arms of the Czech Republic.svg|80px]]
 | map = EU location CZE.png
 | Стольнъ градъ = [[Прага]]
-| Ѩꙁꙑкъ = [[Чешьскъ ѩзыкъ|чешьскъ]]
+| Ѩꙁꙑкъ = [[Чє́шьскъ ѩꙁꙑ́къ|Чє́шьскъ]]
 | Глава = 
 | area =
 | Людии = 10 леѡдръ
