*Empty MediaWiki Message*

--- a/Єѵрѡпа.mw
+++ b/Єѵрѡпа.mw
@@ -1,8 +1,8 @@
-[[Видъ:LocationEurope.png|right|thumb|200px|Єѵрѡ́па свѣ́тьнѣ ха́ртѣ]]
+[[Дѣ́ло:LocationEurope.png|right|thumb|200px|Єѵрѡ́па свѣ́тьнѣ ха́ртѣ]]
 '''Єѵрѡ́па''' ѥ́стъ свѣ́та чѧ́сть ⁙ Люди́и 720 лєѡ́дръ обита́ѥтъ ⁙ Бол҄ьши дрьжа́ва [[Рѡсі́ꙗ]] ѥ́стъ ⁙ Єѵрѡ́пꙑ пространиѥ 10 лєѡ́дръ к҃м² ѥстъ ⁙ Бол҄ьши рѣка [[Вльга]] ѥ́стъ ⁙ Болѥ ѥꙁєро ѥ́стъ [[Ла́дожьско ѥ́ꙁєро|Ла́дожьско]]
 
 == Єѵрѡ́пꙑ чѧ́сти ==
-[[Видъ:Location-Europe-UNsubregions-Slovensky.png|right|thumb|200px|Єѵрѡ́пꙑ чѧ́сти]]
+[[Дѣ́ло:Location-Europe-UNsubregions-Slovensky.png|right|thumb|200px|Єѵрѡ́пꙑ чѧ́сти]]
 * [[Сѣ́вєрьна Єѵрѡ́па]]
 * [[Ꙁа́падьна Єѵрѡ́па]]
 * [[Срѣ́дьнꙗ Єѵрѡ́па]]
@@ -21,7 +21,7 @@
 * {{Италїѩ знамѧ}} [[Италі́ꙗ]]
 * {{Великы Британїѩ знамѧ}} [[Велика Британїꙗ]]
 
-[[Image:Europe 814.jpg|thumb|right|300px|Єѵрѡ́па въ лѣ́то 814.]]
+[[Дѣ́ло:Europe 814.jpg|thumb|right|300px|Єѵрѡ́па въ лѣ́то 814.]]
 
 == ꙁьри́ та́кождє ==
 {{commonscat|Europe}}
