*Empty MediaWiki Message*

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -1,13 +1,13 @@
 {{Дрьжава|name = Рѡсі́ꙗ <br>{{lat-ga|Россия}}
-| знамѧ= [[Видъ:Flag of Russia.svg|150px|border|100px]]
-| знакъ = [[image:Coat of Arms of the Russian Federation.svg|80px]]
+| ꙁнамѧ= [[Дѣ́ло:Flag of Russia.svg|150px|border|100px]]
+| ꙁнакъ = [[Дѣ́ло:Coat of Arms of the Russian Federation.svg|80px]]
 | map = Russian Federation (orthographic projection).svg
 | Стольнъ градъ = [[Москъва]]
-| Ѩзыкъ = [[роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ ѩꙁꙑ́къ]]
+| Ѩꙁꙑкъ = [[роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ ѩꙁꙑ́къ]]
 | Глава = [[Дими́трїи Мєдвѣ́дєвъ]]
 | area =
 | Людии = 142,2 лєѡ́дръ
-| Почѧта = 862 г. <ref>Летописная дата «призвания варягов», от которой традиционно отсчитывается начало непрерывной российской государственности; В современном виде Российская Федерация (РСФСР) была образована 7 ноября 1917 года. С 25 декабря 1991 года носит современное название.</ref>
+| Почѧта = 862 г. <ref>Лєтописная дата "приꙁвания варягов", от которой традиционно отсчитꙑваєтся начало нєпрєрꙑвной российской государствєнности; В соврємєнном видє Российская Фєдєрация (РСФСР) бꙑла обраꙁована 7 ноября 1917 года. С 25 дєкабря 1991 года носит соврємєнноє наꙁваниє.</ref>
 }}
 '''Рѡсі́ꙗ''' и {{lang-ru|Россия}} · равьноправьно и́мѧ '''Рѡсі́искꙑи Съвѫ́ꙁъ''' и {{Lang-ru|Российская Федерация}} · [[Єѵрѡ́па|Єѵрѡ́пꙑ]] въсто́ка и [[Асі́ꙗ|Асі́ѩ]] сѣ́вєра наибо́л҄ьшиꙗ свѣ́та дрьжа́ва ѥ́стъ ⁙ Рѡсі́ѩ сто́льнъ гра́дъ [[Москъва]] ѥ́стъ ⁙ Наибо́л҄ьша града [[Москъва]] и [[Санкт-Пєтєрбоу́ргъ]] ѥ́стє ⁙ Дрьжа́вьнъ [[роу́сьскъ ѩꙁꙑ́къ]] ѥ́стъ ⁙ Люди́и 142,2 лєѡ́дръ обита́ѥтъ
 
@@ -17,9 +17,9 @@
 
 == Росїѩ чѧсти == <!--Субъекты федерации-->
 {{Planned}}
-{| 
+{|
 | valign="top" |'''Области'''
-* [[Вльгоградьска область]] 
+* [[Вльгоградьска область]]
 * [[Лениноградьска область]]
 * [[Москъвьска область]]
 * [[Нижѣновоградьска область]]
@@ -47,13 +47,13 @@
 
 |}
 
-== Рѡсїѩ наибол҄ьше гради ==
+== Рѡсїѩ наибол҄ьшє гради ==
 
-[[image:LocationRussia.svg|thumb|200px|Рѡсі́ꙗ свѣтьнѣ хартѣ]] 
-Си же сѫтъ Рѡсїѩ гради, иде бол҄ьше 1 леѡдръ людии обитаѥтъ.
-{| 
+[[Дѣ́ло:LocationRussia.svg|thumb|200px|Рѡсі́ꙗ свѣтьнѣ хартѣ]]
+Си жє сѫтъ Рѡсїѩ гради, идє бол҄ьшє 1 лєѡдръ людии обитаѥтъ.
+{|
 | valign="top" |
-* [[Москъва]] 
+* [[Москъва]]
 * [[Санкт-Петербоургъ]]
 * [[Новосибирьскъ]]
 * [[Екатерїнбоургъ]]
@@ -65,7 +65,7 @@
 * [[Казанъ]]
 * [[Челѣбиньскъ]]
 * [[Растовъ на Донѣ]]
-* [[Оуфа]] 
+* [[Оуфа]]
 * [[Вльгоградъ]]
 * [[Пермь]]
 |}
