*Empty MediaWiki Message*

--- a/Оукраина.mw
+++ b/Оукраина.mw
@@ -1,10 +1,10 @@
 {{Дрьжава|name = Оукра́ина<br>{{lat-ga|Україна}}
-| знамѧ= [[Видъ:Flag of Ukraine.svg|150px]]
-| знакъ = [[image:Coat of arms of Ukraine.svg|100px]]
-| map = LocationUkraine.svg 
-| Речениѥ= <!--Воля, злагода, добро-->
+| ꙁнамѧ= [[Дѣ́ло:Flag of Ukraine.svg|150px]]
+| ꙁнакъ = [[Дѣ́ло:Coat of arms of Ukraine.svg|100px]]
+| map = LocationUkraine.svg
+| Рєчєниѥ= <!--Воля, злагода, добро-->
 | Стольнъ градъ = [[Кꙑ́ѥвъ]]
-| Ѩзыкъ = [[Оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]]
+| Ѩꙁꙑкъ = [[Оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]]
 | Глава = [[Ви́кторъ Ю́щєнко]]
 | Пространиѥ = 603 700 к҃м²
 | Людии = 46,4 лєѡ́дръ
