--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -20,7 +20,7 @@
 {|
 | valign="top" |'''Области'''
 * [[Вльгоградьска область]]
-* [[Лениноградьска область]]
+* [[Лєниногра́дьска о́бласть]]
 * [[Москъвьска область]]
 * [[Нижѣновоградьска область]]
 * [[Новоградьска область]]
