robot  Modifying: [[fi:Lom (Bulgaria)]]

--- a/Ламъ_·_Блъгарїи.mw
+++ b/Ламъ_·_Блъгарїи.mw
@@ -17,7 +17,7 @@
 [[br:Lom]]
 [[de:Lom (Bulgarien)]]
 [[en:Lom, Bulgaria]]
-[[fi:Lom]]
+[[fi:Lom (Bulgaria)]]
 [[fr:Lom]]
 [[hu:Lom]]
 [[ja:ロム (ブルガリア)]]
