--- a/Латиньскъ_ѩꙁꙑкъ.mw
+++ b/Латиньскъ_ѩꙁꙑкъ.mw
@@ -17,7 +17,7 @@
 [[an:Latín]]
 [[ang:Lǣden]]
 [[ar:لغة لاتينية]]
-[[arc:ܠܫܢܐ ܠܛܝܢܝܐ]]
+[[arc:ܠܫܢܐ ܠܐܛܝܢܝܐ]]
 [[ast:Llatín]]
 [[az:Latın dili]]
 [[bar:Latein]]
