--- a/Латиньска_аꙁъбоукꙑ.mw
+++ b/Латиньска_аꙁъбоукꙑ.mw
@@ -16,7 +16,7 @@
 [[als:Lateinisches Alphabet]]
 [[an:Alfabeto latín]]
 [[ar:أبجدية لاتينية]]
-[[arc:ܐܠܦܒܝܬ ܠܛܝܢܝܐ]]
+[[arc:ܐܠܦܒܝܬ ܠܐܛܝܢܝܐ]]
 [[ast:Alfabetu llatín]]
 [[az:Latın əlifbası]]
 [[ba:Латын әлифбаһы]]
