*Empty MediaWiki Message*

--- a/Лєниноградьска_область.mw
+++ b/Лєниноградьска_область.mw
@@ -1,5 +1,5 @@
 [[Дѣ́ло:Flag of Leningrad Oblast.svg|right|thumb|250px|Лєниноградьскꙑ области ꙁнамѧ]]
-'''Лєниноградська область''' ([[Рѹсьскъ ѩзыкъ|роусьскꙑ]] ''Лєнинградская область'') [[Рѡсї|Рѡсїѩ]] ѥстъ, главьнъ градъ [[Санкт-Петербѹргъ]] ѥсть. Почѧта ѥсть лѣта 1927.
+'''Лєниногра́дьска о́бласть''' {{lang-ru|Ленинградская область}} · [[Рѡсі́ꙗ|Рѡсі́ѩ]] ѥстъ ⁙ гла́вьнъ гра́дъ [[Санкт-Пєтєрбоургъ]] ѥ́сть ⁙ Почѧта ѥ́сть лѣ́та 1927
 
 ==Лєниноградьскꙑѩ области наибол҄ьшє гради==
 
@@ -12,7 +12,7 @@
 * [[Волховъ (градъ)|Волховъ]]
 * [[Вьсеволожьскъ]]
 * [[Сертолово]]
-* [[Лѹга]]
+* [[Лоуга]]
 
 [[Category:Лениноградьска область|*]]
 
