/* Лєниноградьскꙑѩ области наибол҄ьшє гради */

--- a/Лєниноградьска_область.mw
+++ b/Лєниноградьска_область.mw
@@ -12,7 +12,7 @@
 * [[Волховъ (градъ)|Волховъ]]
 * [[Вьсеволожьскъ]]
 * [[Сертолово]]
-* [[Лоуга]]
+* [[Лоу́га]]
 
 [[Category:Лениноградьска область|*]]
 
