*Empty MediaWiki Message*

--- a/Бєрово.mw
+++ b/Бєрово.mw
@@ -1,5 +1,6 @@
+{{coord|display=title|41|42|36|N|22|51|0|E|type:city}}
 {{Селѥниѥ
-| Имѧ = Берово
+| Имѧ = Бє́рово
 | Тѷпъ = Гра́д
 | знамѧ= Mk-bero.gif
 | знакъ = Berovo-grb.png
@@ -9,10 +10,12 @@
 | Основанъ = 
 | Харта = [[Ви́дъ:MK Berovo.png|100px]]
 }}
-'''Берово''' [[Макєдоні́ꙗ|Макєдоні́ѩ]] [[гра́дъ]] ѥ́стъ ⁙
+[[Ви́дъ:Berovo-monastery-church.jpg|thumb|left|200px]]
+'''Бє́рово''' и {{lang-mk|Берово}} {{audio-IPA|Mk-Berovo.ogg|[ˈbɛrɔvɔ]}} ·[[Макєдоні́ꙗ|Макєдоні́ѩ]] Бє́ровьскꙑ обьщинꙑ гла́вьнъ [[гра́дъ]] ѥ́стъ ⁙ Люди́и обита́ѥтъ 7 тꙑсѫщь
 
-[[Ви́дъ:Berovo-monastery-church.jpg|thumb|right|200px]]
-
+== ꙁьри́ та́кождє ==
+* [http://www.berovo.gov.mk/ Бє́рово Мєждоусѣтии]
+{{commonscat|Berovo}}
 {{Макєдоні́ѩ гра́ди}} 
 
 
