*Empty MediaWiki Message*

--- a/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
+++ b/Їллѷрїискословѣньскъ_ѩꙁꙑкъ.mw
@@ -1,29 +1,29 @@
-[[Видъ:Gruppy dialektov.png|thumb|Дїалектъ харта]]
-'''Їллӱрїиско-словѣньскъ ѩзыкъ''' (їллӱрїиско-словѣньскы: ''slovenski jezik, slovenščina'') южьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥстъ. [[Їллӱрїиска Словѣнїꙗ|Їллӱрїискы Словѣнїѩ]] дрьжавьнъ ѩзыкъ ѥстъ.  Симь ѩзыкомь такожде [[Италїꙗ|Италїи]], [[Аустрїꙗ|Аустрїи]] и [[Хръватьска|Хръватьсцѣ]] глаголѭтъ. Людии глаголѭщь карпатьско-словѣньскы 2,2 леѡдръ сѫтъ. Мъноѕи дїалекти ѥмоу сѫтъ, без мала комьжьдо селѣ свои ѩзыкъ ѥстъ. Словѣньскы назъванъ «їллӱрїиско-словѣньскъ» да бѣжали о съмѣшени съ [[словѣньскъ ѩзыкъ|словѣньскомь]] ѩзыкомь и [[Карпатьско-словѣньскъ ѩзыкъ|Карпатьско-словѣньскыимъ]] ѩзыкомъ бѫ.
+[[Дѣ́ло:Gruppy dialektov.png|thumb|Дїалєктъ харта]]
+'''Їллѷрі́искословѣ́ньскъ ѩꙁꙑ́къ''' и їллѷрїиско-словѣньскꙑ ''slovenski jezik, slovenščina'' · южьнословѣньска иꙁвода словѣ́ньска дрѣвєсє ѩꙁꙑ́къ ѥ́стъ ⁙ [[Їллѷрі́иска Словѣні́ꙗ|Їллѷрі́искꙑ Словѣні́ѩ]] дрьжа́вьнъ ѩꙁꙑ́къ ѥ́стъ ⁙ С҄имь ѩꙁꙑкомь такождє [[Италїꙗ|Италїи]] · [[Аѵстрі́ꙗ|Аѵстрі́и]] и [[Хръватьска|Хръватьсцѣ]] глаголѭтъ ⁙ Людии глаголѭщь їллѷрі́искословѣ́ньскꙑ 2,2 лєѡ́дръ сѫ́тъ ⁙ Мъноꙃи дїалєкти ѥмоу сѫ́тъ · бєꙁ мала комьжьдо сєлѣ свои ѩꙁꙑ́къ ѥ́стъ ⁙ Словѣ́ньскꙑ наꙁъванъ ⁖ їллѷрі́искословѣ́ньскъ ⁖ да бѣжали о съмѣшєниꙗ съ [[словѣ́ньскъ ѩꙁꙑ́къ|словѣ́ньскомь]] ѩꙁꙑкомь и [[Карпа́тьскословѣ́ньскъ ѩꙁꙑ́къ|карпа́тьскословѣ́ньскꙑимъ]] ѩꙁꙑкомъ бѫ
 
-Извѣстьнъ сь ѩзыкъ ѕѣло своими особостьми грамматїцѣ и фѡнитїцѣ ѥстъ. Грамматїцѣ главьнаꙗ ѥстъ, ѥже [[двоина]] вънѥмь съхранѥна ѥстъ, ꙗкоже ѥдьномь тъкъмо [[врьхоулоужичьскъ ѩзыкъ|врьхоулоужичьсцѣ ѩзыцѣ]] посрѣдѣ вьс҄ѣхъ словѣньскъ.
+Иꙁвѣстьнъ сь ѩꙁꙑкъ ꙃѣло своими особостьми грамматїцѣ и фѡнитїцѣ ѥстъ ⁙ Грамматїцѣ главьнаꙗ ѥстъ · ѥжє [[двоина]] вънѥмь съхранѥна ѥ́стъ · ꙗкожє ѥдьномь тъкъмо [[врьхоулѫжичьскъ ѩꙁꙑ́къ|врьхоулѫжичьсцѣ ѩꙁꙑцѣ]] посрѣдѣ вьс҄ѣхъ словѣ́ньскъ
 
-==  Фѡнитїка  ==
+== Фѡнитїка ==
 
-[[Видъ:Slovenian vowel chart.png|thumb|left|їллѷрі́искословѣ́ньскꙑ гласьнꙑ ꙁвѫци]]
-Фѡнитїцѣ жє чоудєсьна вєщь гласьници сѫ́тъ ⁙ Въ ѥдиного на дєсѧтє нашєго гласьника мѣсто сьдє осмь гласьникъ сѫ́тъ : '''а''', '''є''', '''и''', '''о''', '''оу''', '''ъ''', '''ѣ''', '''ѫ'''. '''Ъ''' срѣдиньнѣи сѧ иꙁдрицаѥтъ ([ə]) ⁙ '''Ѣ''' жє мєждоу '''є''' и '''и''' стоитъ ⁙ '''Ѫ''' жє носьнꙑи приꙁвѫкъ нє съхранилъ ѥ́стъ ⁙ Нѣкогда с҄ихъ ꙁвѫ́къ бол҄ьши чѧ́сть длъга или кратъка бꙑти могла ѥ́стъ · нꙑнѣ жє тако бєꙁ мала никъто нє глаголѥтъ 
+[[Дѣ́ло:Slovenian vowel chart.png|thumb|left|їллѷрі́искословѣ́ньскꙑ гласьнꙑ ꙁвѫци]]
+Фѡнитїцѣ жє чоудєсьна вєщь гласьници сѫ́тъ ⁙ Въ ѥдиного на дєсѧтє нашєго гласьника мѣсто сьдє осмь гласьникъ сѫ́тъ : '''а''', '''є''', '''и''', '''о''', '''оу''', '''ъ''', '''ѣ''', '''ѫ'''. '''Ъ''' срѣдиньнѣи сѧ иꙁдрицаѥтъ ([ə]) ⁙ '''Ѣ''' жє мєждоу '''є''' и '''и''' стоитъ ⁙ '''Ѫ''' жє носьнꙑи приꙁвѫкъ нє съхранилъ ѥ́стъ ⁙ Нѣкогда с҄ихъ ꙁвѫ́къ бол҄ьши чѧ́сть длъга или кратъка бꙑти могла ѥ́стъ · нꙑнѣ жє тако бєꙁ мала никъто нє глаголѥтъ
 
-Словѣ́ньсции гласьници '''а''', '''є''', '''и''', '''о''', '''оу''', '''ѣ''' и '''ѫ''' тиждє ꙁвѫци стали сѫ́тъ ⁙ '''Ѧ''' жє '''є''' сталъ ѥ́стъ ѥгда кратъкъ и '''ѣ''' ѥгда длъгъ ѥ́стъ ⁙ '''Ꙑ''' жє '''и''' сталъ ѥ́стъ ⁙ Ѥри жє пали сѫ́тъ · ѥгда слабахъ мѣстахъ бꙑли сѫ́тъ · и́ли оба '''ъ''' ста́ли сѫ́тъ · ѥгда дроугахъ мѣстахъ 
+Словѣ́ньсции гласьници '''а''', '''є''', '''и''', '''о''', '''оу''', '''ѣ''' и '''ѫ''' тиждє ꙁвѫци стали сѫ́тъ ⁙ '''Ѧ''' жє '''є''' сталъ ѥ́стъ ѥгда кратъкъ и '''ѣ''' ѥгда длъгъ ѥ́стъ ⁙ '''Ꙑ''' жє '''и''' сталъ ѥ́стъ ⁙ Ѥри жє пали сѫ́тъ · ѥгда слабахъ мѣстахъ бꙑли сѫ́тъ · и́ли оба '''ъ''' ста́ли сѫ́тъ · ѥгда дроугахъ мѣстахъ
 
-[[Климє́нтовица|Климє́нтовицѫ]] бо [[Словѣ́нє (Їллѷрі́исци)|Їллѷрі́исции Словѣ́нє]] ꙁабꙑли · [[Лати́ньска а́ꙁъбоукꙑ|лати́ньскꙑ]] жє боукъви хоудо присъпособили сѫ́тъ · нꙑнѣ различиꙗ писмѣ мєждоу '''є''', '''ѣ''' и '''ъ''' (вьс҄и триѥ латиньскоѭ боукъвиѭ '''e''' сѧ пишѫтъ) · ꙗкожє и мєждоу '''о''' и '''ѫ''' (ла҃т '''o''') нѣстъ.
+[[Климє́нтовица|Климє́нтовицѫ]] бо [[Словѣ́нє (Їллѷрі́исци)|Їллѷрі́исции Словѣ́нє]] ꙁабꙑли · [[Лати́ньска а́ꙁъбоукꙑ|лати́ньскꙑ]] жє боукъви хоудо присъпособили сѫ́тъ · нꙑнѣ раꙁличиꙗ писмѣ мєждоу '''є''', '''ѣ''' и '''ъ''' (вьс҄и триѥ латиньскоѭ боукъвиѭ '''e''' сѧ пишѫтъ) · ꙗкожє и мєждоу '''о''' и '''ѫ''' (ла҃т '''o''') нѣстъ.
 
-== Їллӱрїиско-словѣньска азбоукы ==
-[[Видъ:Slovenska abeceda.png|thumb|400px|Їллѷрїиско-словѣньска азбоукы пьсана разномь боуквиѥмь (Times New Roman, Arial, Lucida Console и Monotype Corsiva)]]
-Їллӱрїиско-словѣньсцѣи азбоукъве 25 боукъвъ и 3 дїграѳи сѫть.
+== Їллӱрїиско-словѣньска аꙁбоукꙑ ==
+[[Дѣ́ло:Slovenska abeceda.png|thumb|400px|Їллѷрїиско-словѣньска аꙁбоукꙑ пьсана раꙁномь боуквиѥмь (Times New Roman, Arial, Lucida Console и Monotype Corsiva)]]
+Їллӱрїиско-словѣньсцѣи аꙁбоукъвє 25 боукъвъ и 3 дїграѳи сѫть.
 {| cellSpacing="0" cellPadding="0" border="1" style="text-align: center"
 |-----
-! Бѹкы !! звѫкъ
+! Боукꙑ !! ꙁвѫкъ
 | width="1" rowspan="22" | &nbsp;
-! Бѹкы !! звѫкъ
+! Боукꙑ !! ꙁвѫкъ
 |-----
 | A a || [a] ||| M m|| [m]
 |-----
-| B b || [b], [p] ||| N n  || [n]
+| B b || [b], [p] ||| N n || [n]
 |-----
 | C c || [ʦ] ||| Nj nj || [ɲ]
 |-----
@@ -35,21 +35,21 @@
 |-----
 | E e || [e], [ɛ], [ə] || S s || [s]
 |-----
-| F f  || [f] || Š š || [ʃ]
+| F f || [f] || Š š || [ʃ]
 |-----
 | G g || [g], [k] || T t || [t]
 |-----
 | H h || [x] || U u || [u]
 |-----
-| I i || [i] || V v  || [v], [w]
+| I i || [i] || V v || [v], [w]
 |-----
 | J j || [j] || Zz || [z]
 |-----
-|K k  || [k] || Ž ž  || [ʒ], [ʃ]
+|K k || [k] || Ž ž || [ʒ], [ʃ]
 |-----
-| L l || [l], [w] || || 
+| L l || [l], [w] || ||
 |-----
-| Lj lj|| [ʎ], [l] ||  || 
+| Lj lj|| [ʎ], [l] || ||
 |-----
 |}
 
