--- a/Карпатьскословѣньскъ_ѩꙁꙑкъ.mw
+++ b/Карпатьскословѣньскъ_ѩꙁꙑкъ.mw
@@ -1,13 +1,13 @@
-'''Карпатьско-словѣньскъ ѩзыкъ''' (карпатьско-словѣньскы: ''slovenčina'')  западьнословѣньска извода словѣньска дрѣвесе ѩзыкъ ѥстъ. [[Словѣньско|Словѣньскы]] дрьжавьнъ ѩзыкъ ѥстъ. Людии глаголѭщь карпатьско-словѣньскы 5 леѡдръ сѫтъ. Словѣньскы назъванъ «карпатьско-словѣньскъ» да бѣжали бѫ о съмѣшениꙗ съ [[словѣньскъ ѩзыкъ|словѣньскомь]] ѩзыкомь и [[Їллӱрїиско-словѣньскъ ѩзыкъ|їллӱрїиско-словѣньскомъ]] ѩзыкомъ.
-== Карпатьско-словѣньска азъбоукы  ==
+'''Карпа́тьскословѣньскъ ѩꙁꙑ́къ''' и карпа́тьскословѣ́ньскꙑ  ''slovenčina'' · ꙁападьнословѣ́ньска иꙁвода словѣ́ньска дрѣвєсє ѩꙁꙑ́къ ѥ́стъ ⁙ [[Словѣ́ньско|Словѣ́ньска]] дрьжа́вьнъ ѩꙁꙑ́къ ѥ́стъ ⁙ Люди́и глаголѭщь карпа́тьскословѣ́ньскꙑ 5 лєѡ́дръ сѫ́тъ ⁙ Словѣ́ньскꙑ наꙁъванъ ⁖ карпа́тьскословѣ́ньскъ ⁖ да бѣжали бѫ о съмѣшєниꙗ съ [[словѣ́ньскъ ѩꙁꙑ́къ|словѣ́ньскомь]] ѩꙁꙑкомь и [[Їллѷрі́искословѣ́ньскъ ѩꙁꙑ́къ|їллѷрі́иско словѣ́ньскомъ]] ѩꙁꙑкомъ
+== Карпа́тьскословѣ́ньска а́ꙁъбоукꙑ ==
 
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
-Аа Áá Ää Bb Cc Čč Dd Ďď Dzdz Dždž Ee Éé Ff Gg Hh Chch Ii Íí Jj Kk Ll Ĺĺ Ľľ Mm Nn Ňň Oo Óó Ôô Pp Qq Rr Ŕŕ Ss Šš Tt Ťť Uu Úú Vv Ww Xx Yy Ýý Zz Žž
+Aa Áá Ää Bb Cc Čč Dd Ďď Dzdz Dždž Ee Éé Ff Gg Hh Chch Ii Íí Jj Kk Ll Ĺĺ Ľľ Mm Nn Ňň Oo Óó Ôô Pp Qq Rr Ŕŕ Ss Šš Tt Ťť Uu Úú Vv Ww Xx Yy Ýý Zz Žž
 </div>
 
-== Зьри такожде ==
+== ꙁьри́ та́кождє ==
 
-{{InterWiki|sk|Hlavná stránka||карпатьско-словѣньскыимь}}
+{{InterWiki|sk|Hlavná stránka||карпа́тьскословѣ́ньскꙑимь}}
 [[Category:Словѣ́ньсци ѩꙁꙑци́]]
 
 [[af:Slowaaks]]
