*Empty MediaWiki Message*

--- a/Вльгоградъ.mw
+++ b/Вльгоградъ.mw
@@ -1,21 +1,35 @@
-{{Градъ|Имѧ = Вльгоградъ
+{{Градъ|Имѧ = Вльгогра́дъ
+|Тѷпъ= гра́дъ
 | знамѧ= Volgograd flag.gif
 | знакъ = Coat of Arms of Volgograd.png
-| Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
-| Глава = 
-| Людии = 
+| Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсі́ꙗ
+| Глава =
+| Людии = 983 893
 | Основанъ = 1589
-| Харта =
+| Харта =[[Дѣ́ло:Volgograd districts all.svg|200px]]
 |}}
-'''Вльгоградъ''' ({{Lang-ru|Волгоград}}) [[Рѡсї|Рѡсїѩ]] градъ, [[Вльгоградьска область|Вльгоградьскы области]] главьнъ градъ ѥстъ. Основанъ ѥстъ лѣта 1589. Вльгограда имѧ до лѣта 1925 ''Царицинъ'' ({{lang-ru|Царицын}}, иного тѷрчьска ѩзыка слово ''сары син'' «жльтъ островъ»), а о лѣта 1925 до лѣта 1961 ''Сталиноградъ'' ({{lang-ru|Сталинград}}) бѣ. Нынѣ назъваныи рѣкы [[Вльга|Вльгы]] именьмь ѥиже сѧ мѣститъ. Рѡсїѩ наидльжаии градъ о сѣвера на югъ. 
+'''Вльгоградъ''' и {{Lang-ru|Волгоград}} · [[Рѡсі́ꙗ|Рѡсі́ѩ]] [[Вльгогра́дьска о́бласть|Вльгогра́дьскꙑ о́бласти]] гла́вьнъ гра́дъ ѥ́стъ ⁙ Люди́и обитаѥтъ 1 лєѡ́дръ
 
-Вльгоград [[градъ-ирѡи]] ѥстъ.
+== їсторі́ꙗ ==
+[[Дѣ́ло:Coat of Arms of Volgograd (Tsaritsyn Volgograd oblast) (1857).png|thumb|left|100px|Царицꙑна ꙁна́къ]]
+Основанъ ѥ́стъ лѣ́та 1589 ⁙ Вльгограда имѧ до лѣ́та 1925 ''Царицинъ'' и {{lang-ru|Царицын}} · иного тѷрчьска ѩꙁꙑка слово ⁖ ''сарꙑ син'' ⁖ или жльтъ островъ · а о лѣ́та 1925 до лѣ́та 1961 ''Сталиноградъ'' и {{lang-ru|Сталинград}} · бѣ ⁙ Нꙑнѣ наꙁъванꙑи рѣкꙑ [[Вльга|Вльгꙑ]] имєньмь ѥижє сѧ мѣститъ ⁙ Рѡсі́ѩ наидльжаии гра́дъ о сѣвєра на ю́гъ.
 
-== Зьри такожде ==
+Вльгогра́д [[ирѡи градъ]] ѥ́стъ
+
+== гра́да чѧ́сти==
+Вльгогра́дъ на 8 чѧсти́и дѣ́лѥнъ ѥ́стъ
+# Трактороꙁаводьска чѧ́сть · 136 тꙑсѫщь люди́и
+# Краснооктѡврі́иска чѧ́сть · 154,3 тꙑсѫщь люди́и
+# Ꙃєржиньска чѧ́сть · 171.1 тꙑсѫщь люди́и
+# Срѣдьнꙗ чѧ́сть · 88,8 тꙑсѫщь люди́и
+# Ворошиловьска чѧ́сть · 77,6 тꙑсѫщь люди́и
+# Съвѣтьска чѧ́сть · 81,3 тꙑсѫщь люди́и
+# Кировьска чѧ́сть · 103,1 тꙑсѫщь люди́и
+# Красноармєиська чѧ́сть · 171,4 тꙑсѫщь люди́и
+== ꙁьри такождє ==
 {{commonscat|Volgograd}}
 {{Рѡсїѩ наибол҄ьше гради}}
-[[Category:Гради]]
-[[Category:Рѡсї]]
+[[Category:Рѡсі́ѩ гра́ди]]
 
 [[af:Wolgograd]]
 [[ar:فولجوجراد]]
