*Empty MediaWiki Message*

--- a/Прьваꙗ_дѷнастиꙗ_Єгѷпьта.mw
+++ b/Прьваꙗ_дѷнастиꙗ_Єгѷпьта.mw
@@ -1,5 +1,5 @@
-'''Прьва дѷнасти [[Егѷпьтъ|Егѷпьта]]''' [[Фараѡнъ|фараѡни]] бѣ ции владычьствоваахѫ отъ лѣта 3035 прѣдъ р҃х до лѣта 2890 прѣдъ р҃х. Сии фараѡни [[Хоръ-Аха|Хоръ-Аха]] и [[Дъжеръ|Дъжеръ]] и [[Денъ|Денъ]] и прочии сѫтъ. Брьньни гроби ихъ обрѣщени бышѧ древл҄ьн҄ихъ градѣхъ [[Абѷдъ|Абѷдѣ]] и [[Саккара|Саккарѣ]] отъ [[Велика Британї|англїиська]] [[Археологи|археолога]] [[Флиндерсъ Петри|Флиндерса Петри]] сътолѣти 19.
-
+'''Прьваꙗ дѷнастиꙗ [[Єгѷптъ|Єгѷпта]]''' [[Фараѡнъ|фараѡни]] бѣ ции владꙑчьствоваахѫ отъ лѣта 3035 прѣдъ р҃х до лѣта 2890 прѣдъ р҃х ⁙ Сии фараѡни [[Хоръ-Аха|Хоръ-Аха]] и [[Дъжєръ|Дъжєръ]] и [[Дєнъ|Дєнъ]] и прочии сѫ́тъ ⁙ Брьньни гроби ихъ обрѣщєни бꙑшѧ дрєвл҄ьн҄ихъ градѣхъ [[Абѷдъ|Абѷдѣ]] и [[Саккара|Саккарѣ]] отъ [[Вєли́ка Британі́ꙗ|англі́иська]] [[Архєологі́ꙗ|архєолога]] [[Флиндерсъ Петри|Флиндєрса Пєтри]] сътолѣтиꙗ 19
+[[Category:Дрє́вл҄ьн҄ь Є́гѷптъ]]
 
 [[en:First dynasty of Egypt]]
 [[ar:أسرة مصرية أولى]]
