*Empty MediaWiki Message*

--- a/Хоръ_Аха.mw
+++ b/Хоръ_Аха.mw
@@ -1,7 +1,6 @@
-'''Хоръ-Аха''' [[Егѷптъ|Егѷпта]] [[Прьва дѷнасти Егѷпьта|прьвыѩ дѵнастїѩ]] бѣ [[фараѡнъ]] иже [[Мемфь|Мемфь]] гра́дъ основа.
+'''Хоръ-Аха''' [[Єгѷптъ|Єгѷпта]] [[Прьваꙗ дѷнастиꙗ Єгѷпьта|прьвꙑѩ дѵнастїѩ]] въторꙑи [[фараѡнъ]] бѣ ижє [[Мє́мфь|Мє́мфь]] гра́дъ основа
 
-
-[[Category:Егѷптъ]]
+[[Category:Дрє́вл҄ьн҄ь Є́гѷптъ]]
 
 
 [[en:Hor-Aha]]
