robot  Modifying: [[la:Orbis Arabicus]]

--- a/Аравьскꙑ_странꙑ.mw
+++ b/Аравьскꙑ_странꙑ.mw
@@ -26,7 +26,7 @@
 [[ja:アラブ世界]]
 [[kg:Bansi ya balabu]]
 [[ko:아랍 세계]]
-[[la:Orbis Arabicum]]
+[[la:Orbis Arabicus]]
 [[lt:Arabų šalys]]
 [[ms:Dunia Arab]]
 [[nl:Arabische wereld]]
