--- a/Хоръ_Аха.mw
+++ b/Хоръ_Аха.mw
@@ -1,3 +1,4 @@
+[[Дѣ́ло:GlazedFiaenceVesselFragmentNameOfAha-BritishMuseum-August21-08.jpg|thumb]]
 '''Хоръ-Аха''' [[Єгѷптъ|Єгѷпта]] [[Прьваꙗ дѷнастиꙗ Єгѷпьта|прьвꙑѩ дѵнастїѩ]] въторꙑи [[фараѡнъ]] бѣ ижє [[Мє́мфь|Мє́мфь]] гра́дъ основа
 
 [[Category:Дрє́вл҄ьн҄ь Є́гѷптъ]]
