*Empty MediaWiki Message*

--- a/Авѷдъ.mw
+++ b/Авѷдъ.mw
@@ -1,5 +1,7 @@
-'''Абѷдъ''' древл҄ьн [[Егѷптъ|Егѷпта]] градъ бѣ, иде [[Осїрь|Осїровъ]] гробъ бѣ, ко пьсано ѥстъ Егѷптьстѣхъ [[мѷѳъ|мѷѳѣхъ]].
-[[Category:Древл҄ьн҄ь Егѷптъ]]
+{{coord|display=title|26|11|6|N|31|55|8|E|}}
+[[Дѣ́ло:Osireion.jpg|thumb]]
+'''Абѷдъ''' дрєвл҄ьнꙗ [[Егѷптъ|єгѷпта]] градъ бѣ · идє [[Осїрь|Осїровъ]] гробъ бѣ · ꙗко пьсано ѥ́стъ єгѷптьстѣхъ [[мѷѳъ|мѷѳѣхъ]]
+[[Category:Дрє́вл҄ьн҄ь Є́гѷптъ]]
 
 [[ar:أبيدوس]]
 [[ca:Abidos]]
