*Empty MediaWiki Message*

--- a/Чєлѣбиньскъ.mw
+++ b/Чєлѣбиньскъ.mw
@@ -1,18 +1,18 @@
 {{Градъ|Имѧ = Челѣбиньскъ
 | знамѧ= Flag_of_Chelyabinsk.png
 | знакъ = Coat_of_Arms_of_Chelyabinsk_(2000).png
-| Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсї
-| Глава = Мїхаилъ Юревичь
-| Людии = 1093 тысѫщѧ
+| Дрьжава = {{Рѡсїѩ знамѧ}} Рѡсїꙗ
+| Глава = Мїхаилъ Юрєвичь
+| Людии = 1093 тꙑсѫщѧ
 | Основанъ = 1736
-| map = 
+| map =
 |}}
-'''Челѣбиньскъ''' ({{Lang-ru|Челябинск}}) [[Рѡсї|Рѡсїѩ]] [[Челѣбиньска область|Челѣбиньскы области]] главьнъ градъ ѥстъ. Основанъ лѣта 1736 и нареченъ градъ съ лѣта 1787 ѥстъ. Людии обитаѥтъ 1093 тысѫщѧ. Построѥнъ [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣзъсибирьсцѣ колѣинѣ пѫти]] ѥстъ.
+'''Чєлѣбиньскъ''' ({{Lang-ru|Челябинск}}) [[Рѡсї|Рѡсїѩ]] [[Челѣбиньска область|Чєлѣбиньскꙑ области]] главьнъ градъ ѥстъ. Основанъ лѣта 1736 и нарєчєнъ градъ съ лѣта 1787 ѥстъ. Людии обитаѥтъ 1093 тꙑсѫщѧ. Построѥнъ [[Прѣзъсибирьскъ колѣинъ пѫть|Прѣꙁъсибирьсцѣ колѣинѣ пѫти]] ѥстъ.
 
 <gallery>
 Image:Coat of Arms of Chelyabinsk (1994).png|Давьн҄ь Челѣбиньска знакъ
 </gallery>
-== Зьри такожде ==
+== ꙁьри такождє ==
 {{commonscat|Chelyabinsk}}
 {{Рѡсїѩ наибол҄ьше гради}}
 
