*Empty MediaWiki Message*

--- a/Хръватьска.mw
+++ b/Хръватьска.mw
@@ -1,16 +1,17 @@
-{{Дрьжава|name = Хръва́тьска<br>Republika Hrvatska
+{{Дрьжава|name = Хръва́тьска Димократі́ꙗ<br>Republika Hrvatska
 | знамѧ= [[Видъ:Flag_of_Croatia.svg|150px]]
 | знакъ = [[image:Coat_of_arms_of_Croatia.svg|80px]]
 | map = LocationCroatia.svg 
-| Стольнъ градъ = [[Загребъ]]  
-| Ѩзыкъ = [[хръватьскъ ѩзыкъ|хрьватьскъ]] 
+| Стольнъ градъ = [[Ꙁа́грєбъ]]  
+| Ѩзыкъ = [[хръва́тьскъ ѩꙁꙑ́къ|хрьва́тьскъ]] 
 | Глава = 
-| area =
-| Людии =  
-| Почѧта = 
+| Пространиѥ = 56 542 к҃м²
+| Людии =  4 555 000
+| Почѧта = 1991
 }}
-'''Хръва́тьска''' или Димократї Хръватьска ([[словѣньскъ ѩзыкъ|словѣньскы]] Хръвати, слово «Хръватьска» хръватьскаѥго имене прѣложениѥ ѥстъ; {{lang-hr|Republika Hrvatska}}.) дрьжава сѣверозапада Балканъ и срѣдьнѩѩ [[Evрѡпа|Еѵрѡпы]] ѥстъ. Стольнъ градъ Хръватъ [[Загребъ]] ѥстъ. Дрьжавьнъ ѩзыкъ Хръватъ [[хръватьскъ ѩзыкъ]] ѥстъ.
+'''Хръва́тьска''' и {{lang-hr|Hrvatska}} · {{lang-cu|Хръвати}} · слово ⁖ Хръва́тьска ⁖ хръватьскаѥго имєнє прѣложєниѥ ѥстъ · єпі́симьно имѧ '''Хръва́тьска Димократі́ꙗ''' и {{lang-hr|Republika Hrvatska}} · дрьжа́ва сѣвєроꙁапада Балканъ срѣдьнѩѩ [[Єvрѡ́па|Єѵрѡ́пꙑ]] ѥ́стъ ⁙ Сто́льнъ гра́дъ Хръватъ [[Ꙁа́грєбъ]] ѥ́стъ ⁙ Дрьжа́вьнъ ѩꙁꙑ́къ [[хръва́тьскъ ѩꙁꙑ́къ]] ѥ́стъ ⁙ Люди́и 4 лєѡ́дръ обитаѥтъ
 
+{{commonscat|Croatia}}
 {{Словѣньскы дрьжавы}}
 [[Category:Хръва́тьска| ]]
 
